--- a/rime/xkyddz.dict.yaml
+++ b/rime/xkyddz.dict.yaml
@@ -368,7 +368,7 @@ sort: by_weight
 庳	biovui
 庇	biovv
 庇	biovva
-贲	biu
+笔	biu
 鲾	biua
 狴	biuav
 狴	biuava
@@ -383,7 +383,7 @@ sort: by_weight
 彼	biuuau
 舭	biuuv
 舭	biuuva
-笔	biuv
+贲	biuv
 箅	biuvi
 箅	biuvia
 馝	biuvo
@@ -758,7 +758,7 @@ sort: by_weight
 布	buvuia
 不	buvuio
 被	bw
-陂	bwa
+贝	bwa
 陂	bwai
 陂	bwaiau
 鐾	bwav
@@ -5213,12 +5213,13 @@ sort: by_weight
 溍	jbav
 溍	jbavii
 尽	jbavoo
-荩	jbi
+金	jbi
 巾	jbia
 巾	jbiaii
 仅	jbiao
 仅	jbiaoo
 紧	jbii
+荩	jbiia
 紧	jbiiaa
 荩	jbiiav
 锦	jbio
@@ -8881,9 +8882,10 @@ sort: by_weight
 牧	muuvuv
 牡	muuvv
 牡	muuvvo
-坶	muv
+木	muv
 模	muvi
 模	muviio
+坶	muvo
 坶	muvoaa
 每	mw
 妹	mwa
@@ -11411,7 +11413,7 @@ sort: by_weight
 事	siv
 轼	siva
 轼	sivavv
-贳	sivi
+十	sivi
 肆	sivia
 贳	siviao
 事	siviav
@@ -11873,7 +11875,7 @@ sort: by_weight
 收	sraiuv
 溲	srau
 溲	srauiv
-搜	sri
+手	sri
 瞍	sria
 螋	sriau
 螋	sriaui
@@ -11886,9 +11888,10 @@ sort: by_weight
 售	srioo
 售	sriooo
 锼	srioui
-授	sriu
+搜	sriu
 擞	sriuo
 擞	sriuou
+授	sriuu
 搜	sriuui
 授	sriuuo
 嗽	sro
@@ -12809,15 +12812,16 @@ sort: by_weight
 煓	ttouia
 猯	ttu
 猯	ttuaia
-图	tu
+土	tu
 屠	tua
 涂	tuai
 涂	tuaivv
 屠	tuavuo
-荼	tui
+图	tui
 图	tuiaua
-葖	tuii
+荼	tuii
 荼	tuiiiv
+葖	tuiio
 葖	tuiioo
 菟	tuiiu
 菟	tuiiua
