更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -5864,14 +5864,14 @@ sort: by_weight
 麂	jiovua
 脊	jiovuu
 疾	jiovuv
-赍	jiu
-及	jiua
+几	jiu
+急	jiua
 鲫	jiuaa
 鱾	jiuaav
 鲫	jiuaav
 系	jiuai
 系	jiuaiu
-急	jiuao
+及	jiuao
 急	jiuaoa
 及	jiuaoo
 鲚	jiuaov
@@ -5881,6 +5881,7 @@ sort: by_weight
 觭	jiuavu
 祭	jiuavv
 戟	jiuo
+赍	jiuoa
 赍	jiuoao
 鹡	jiuou
 鹡	jiuoua
@@ -14862,7 +14863,8 @@ sort: by_weight
 跃	yho
 说	yhoa
 说	yhoaou
-哕	yhoi
+曰	yhoi
+哕	yhoia
 哕	yhoiai
 阅	yhoio
 阅	yhoiou
