更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -2172,10 +2172,9 @@ sort: by_weight
 地	di
 缔	dia
 缔	diaaov
-翟	diao
+滴	diao
 翟	diaoi
 翟	diaoio
-滴	diaov
 滴	diaovo
 嫡	diau
 涤	diaua
@@ -11428,14 +11427,14 @@ sort: by_weight
 斯	siviuu
 酾	siviv
 酾	sivivi
-寺	sivo
+士	sivo
 邿	sivoa
 邿	sivoai
 螫	sivoi
 螫	sivoia
 埘	sivoo
 埘	sivooi
-柿	sivov
+寺	sivov
 柿	sivovi
 寺	sivovi
 死	sivu
