不要想知道我更新了什么

--- a/rime/xkyddz.dict.yaml
+++ b/rime/xkyddz.dict.yaml
@@ -2172,10 +2172,9 @@ sort: by_weight
 地	di
 缔	dia
 缔	diaaov
-翟	diao
+滴	diao
 翟	diaoi
 翟	diaoio
-滴	diaov
 滴	diaovo
 嫡	diau
 涤	diaua
@@ -5864,14 +5863,14 @@ sort: by_weight
 麂	jiovua
 脊	jiovuu
 疾	jiovuv
-赍	jiu
-及	jiua
+几	jiu
+急	jiua
 鲫	jiuaa
 鱾	jiuaav
 鲫	jiuaav
 系	jiuai
 系	jiuaiu
-急	jiuao
+及	jiuao
 急	jiuaoa
 及	jiuaoo
 鲚	jiuaov
@@ -5881,6 +5880,7 @@ sort: by_weight
 觭	jiuavu
 祭	jiuavv
 戟	jiuo
+赍	jiuoa
 赍	jiuoao
 鹡	jiuou
 鹡	jiuoua
@@ -11040,7 +11040,8 @@ sort: by_weight
 襦	ruoavo
 褥	ruoavu
 嚅	ruovoa
-乳	ruu
+入	ruu
+乳	ruuo
 乳	ruuoaa
 辱	ruv
 颥	ruvo
@@ -11426,14 +11427,14 @@ sort: by_weight
 斯	siviuu
 酾	siviv
 酾	sivivi
-寺	sivo
+士	sivo
 邿	sivoa
 邿	sivoai
 螫	sivoi
 螫	sivoia
 埘	sivoo
 埘	sivooi
-柿	sivov
+寺	sivov
 柿	sivovi
 寺	sivovi
 死	sivu
@@ -13001,8 +13002,8 @@ sort: by_weight
 脘	wjuo
 脘	wjuooa
 腕	wjuooa
-顽	wjv
-万	wjva
+万	wjv
+顽	wjva
 万	wjvauu
 塆	wjvo
 豌	wjvoo
@@ -14862,7 +14863,8 @@ sort: by_weight
 跃	yho
 说	yhoa
 说	yhoaou
-哕	yhoi
+曰	yhoi
+哕	yhoia
 哕	yhoiai
 阅	yhoio
 阅	yhoiou
@@ -15472,7 +15474,8 @@ sort: by_weight
 殃	ypvu
 殃	ypvuia
 有	yr
-幼	yra
+又	yra
+幼	yraa
 幼	yraaau
 油	yrai
 油	yraiav
