更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -17,10 +17,8 @@ sort: by_weight
 岜	baiaa
 岜	baiaai
 蚆	baiaai
-罢	baiav
 罢	baiavo
 芭	baii
-芭	baiia
 芭	baiiai
 菝	baiii
 菝	baiiiu
@@ -43,23 +41,22 @@ sort: by_weight
 粑	baoua
 羓	baouai
 粑	baouai
-叭	baouo
 叭	baouoo
 疤	baov
 疤	baovai
-鲅	bau
-鲃	baua
+爸	bau
+鲅	baua
+鲃	bauaa
 鲃	bauaai
 鲌	bauau
 鲌	bauaui
 鲅	bauavu
 魃	baui
 魃	bauivu
-爸	bauo
 爸	bauoai
-胈	bauv
-笆	bauva
+笆	bauv
 笆	bauvai
+胈	bauvu
 胈	bauvua
 坝	bav
 靶	bavi
@@ -72,11 +69,12 @@ sort: by_weight
 耙	bavv
 耙	bavva
 耙	bavvai
-滨	bb
+宾	bb
 缤	bba
 缤	bbaaoo
 濒	bbai
 濒	bbaivi
+滨	bbao
 滨	bbaooa
 摈	bbi
 豳	bbia
@@ -88,9 +86,8 @@ sort: by_weight
 傧	bbiooa
 镔	bbiooo
 摈	bbiuoo
-宾	bbo
+斌	bbo
 宾	bbooui
-斌	bbov
 斌	bbovvv
 膑	bbu
 邠	bbuo
@@ -113,24 +110,23 @@ sort: by_weight
 骠	bdaa
 骉	bdaaa
 骉	bdaaaa
-骠	bdaav
 骠	bdaavi
 瀌	bdao
 瀌	bdaovu
 婊	bdauvv
-摽	bdi
+镖	bdi
 幖	bdia
 幖	bdiavi
 蔈	bdii
 藨	bdiio
 藨	bdiiov
 蔈	bdiivi
-镖	bdio
-镳	bdioo
+镳	bdio
 镳	bdioov
 儦	bdiov
 儦	bdiova
 镖	bdiovi
+摽	bdiu
 摽	bdiuvi
 彪	bdiv
 彪	bdivuu
@@ -175,24 +171,25 @@ sort: by_weight
 汴	bfaovi
 弁	bfaovu
 边	bfauoa
-抃	bfi
+便	bfi
 蝙	bfia
 蝙	bfiaoa
 苄	bfii
 萹	bfiio
 萹	bfiioa
 苄	bfiiov
+抃	bfiu
 抃	bfiuov
-便	bfiv
 便	bfivi
 便	bfivia
-昪	bfo
+变	bfo
 遍	bfoa
 扁	bfoai
 扁	bfoaia
 褊	bfoao
 褊	bfoaoa
 遍	bfoaoa
+昪	bfoi
 昪	bfoiao
 忭	bfoo
 忭	bfooov
@@ -200,14 +197,13 @@ sort: by_weight
 窆	bfoouo
 煸	bfou
 煸	bfouoa
-变	bfov
+辨	bfov
 辫	bfova
 辫	bfovaa
 变	bfovao
 卞	bfovi
 卞	bfovio
-辨	bfovo
-辩	bfovoa
+辩	bfovo
 辨	bfovou
 鳊	bfu
 鳊	bfuaoa
@@ -223,19 +219,18 @@ sort: by_weight
 砭	bfvuuo
 并	bg
 屏	bga
-屏	bgav
 屏	bgavou
 摒	bgi
 蛃	bgia
 蛃	bgiavi
 摒	bgiuav
-昺	bgo
+病	bgo
+昺	bgoi
 昺	bgoivi
 炳	bgou
 炳	bgouvi
 并	bgouvv
-病	bgov
-冰	bgova
+冰	bgov
 冰	bgovaa
 禀	bgovi
 禀	bgovia
@@ -257,15 +252,14 @@ sort: by_weight
 白	bh
 败	bha
 败	bhaouv
-摆	bhi
-捭	bhiu
+拜	bhi
+摆	bhiu
 伯	bhiui
 摆	bhiuia
 伯	bhiuia
 掰	bhiuu
 捭	bhiuui
 掰	bhiuuo
-拜	bhiuv
 拜	bhiuvv
 佰	bhiv
 佰	bhivui
@@ -298,7 +292,7 @@ sort: by_weight
 妣	biauv
 妣	biauva
 滗	biauvo
-弼	biav
+臂	biav
 嬖	biava
 沘	biavau
 嬖	biavau
@@ -307,8 +301,8 @@ sort: by_weight
 屄	biavoo
 襞	biavov
 辟	biavov
-臂	biavu
 臂	biavuu
+弼	biavv
 壁	biavv
 壁	biavvo
 弼	biavvu
@@ -3290,19 +3284,19 @@ sort: by_weight
 防	fpai
 防	fpaiov
 妨	fpauov
-芳	fpi
+仿	fpi
 蚄	fpia
 蚄	fpiaov
+芳	fpii
 芳	fpiiov
-仿	fpio
 钫	fpioo
 钫	fpioov
 仿	fpiova
-昉	fpo
-访	fpoa
-房	fpoao
+访	fpo
+房	fpoa
 房	fpoaov
 访	fpoaov
+昉	fpoi
 昉	fpoiov
 方	fpov
 邡	fpova
@@ -11801,7 +11795,6 @@ sort: by_weight
 铄	soioua
 搠	soiuou
 些	soiv
-些	soivv
 些	soivvv
 唆	soo
 唆	sooaou
@@ -12251,8 +12244,8 @@ sort: by_weight
 龆	tdiv
 龆	tdivau
 跳	tdo
-祧	tdoa
-调	tdoau
+调	tdoa
+祧	tdoau
 调	tdoaua
 祧	tdoauo
 跳	tdoiuo
@@ -12912,7 +12905,6 @@ sort: by_weight
 坉	tyvova
 吞	tyvvoo
 们	u
-而	v
 有	v
 我	w
 挖	wa
@@ -14388,7 +14380,8 @@ sort: by_weight
 挟	xxiuvo
 撷	xxiuvo
 揳	xxiuvv
-偕	xxiv
+些	xxiv
+偕	xxiva
 偕	xxivau
 斜	xxivo
 斜	xxivoo
@@ -16564,7 +16557,7 @@ sort: by_weight
 庤	ziovvo
 痔	ziovvo
 痣	ziovvo
-疐	ziu
+自	ziu
 旨	ziua
 鲻	ziuaa
 鲻	ziuaaa
@@ -16574,7 +16567,6 @@ sort: by_weight
 觯	ziuaou
 氏	ziuav
 氏	ziuava
-自	ziui
 自	ziuiav
 支	ziuo
 𨙸	ziuoa
@@ -16763,9 +16755,9 @@ sort: by_weight
 肇	zkoaa
 诏	zkoaau
 肇	zkoaav
-昭	zkoi
+躁	zkoi
+昭	zkoia
 昭	zkoiau
-躁	zkoio
 躁	zkoioo
 照	zkoioo
 曌	zkoioo
@@ -16774,13 +16766,13 @@ sort: by_weight
 噪	zkoooo
 慥	zkoou
 慥	zkoouv
-唣	zkou
+嘲	zkou
 啁	zkoua
 啁	zkouav
+唣	zkoui
 着	zkoui
 唣	zkouia
 着	zkouia
-嘲	zkouo
 嘲	zkouoo
 燥	zkouoo
 糟	zkouv
@@ -17067,7 +17059,8 @@ sort: by_weight
 䦃	zoioi
 镯	zoioia
 䦃	zoioii
-拙	zoiu
+作	zoiu
+拙	zoiua
 擢	zoiua
 拙	zoiuai
 擢	zoiuao
@@ -17076,7 +17069,6 @@ sort: by_weight
 捉	zoiuoi
 做	zoiuoo
 捽	zoiuov
-作	zoiuv
 作	zoiuvi
 桌	zoiv
 卓	zoivu
