更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -5,6 +5,7 @@ sort: by_weight
 ...
 那	a
 不	b
+八	ba	u
 把	ba
 巴	baa
 巴	baaiva
@@ -274,6 +275,7 @@ sort: by_weight
 柏	bhvui
 柏	bhvuia
 百	bhvuoi
+匕	bi	ua
 比	bi
 避	bia
 纰	biaa
@@ -462,6 +464,7 @@ sort: by_weight
 斑	bjvv
 班	bjvvou
 斑	bjvvov
+勹	bk	uaa
 报	bk
 剥	bka
 孢	bkai
@@ -576,6 +579,7 @@ sort: by_weight
 坋	bnvouo
 栟	bnvouv
 奔	bnvuuo
+卜	bo	i
 拨	bo
 驳	boa
 波	boaa
@@ -710,6 +714,7 @@ sort: by_weight
 梆	bpvvvv
 玤	bpvvvv
 棒	bpvvvv
+卜	bu	ioo
 部	bu
 捕	bui
 蔀	buii
@@ -751,6 +756,7 @@ sort: by_weight
 埔	buvovi
 布	buvuia
 不	buvuio
+贝	bw	aoo
 被	bw
 贝	bwa
 陂	bwai
@@ -1288,6 +1294,7 @@ sort: by_weight
 耖	ckvvi
 槽	ckvvia
 耖	ckvviu
+从	cl	iii
 从	cl
 骢	cla
 骢	claaui
@@ -1558,6 +1565,7 @@ sort: by_weight
 厝	covuvi
 瑳	covv
 瑳	covvou
+厂	cp	vu
 常	cp
 嫦	cpa
 沧	cpai
@@ -1978,6 +1986,7 @@ sort: by_weight
 大	davuoo
 耷	davuv
 耷	davuvi
+刁	dd	a
 掉	dd
 屌	dda
 汈	ddaa
@@ -2075,6 +2084,7 @@ sort: by_weight
 靛	dfvvo
 琔	dfvvoo
 靛	dfvvoo
+丁	dg	vi
 定	dg
 萣	dgi
 盯	dgia
@@ -2113,6 +2123,7 @@ sort: by_weight
 碇	dgvuoo
 玎	dgvv
 玎	dgvvvi
+呆	dh	o
 代	dh
 怠	dha
 绐	dhaa
@@ -2332,6 +2343,7 @@ sort: by_weight
 石	djvuo
 石	djvuoo
 殚	djvuou
+刀	dk	a
 到	dk
 导	dka
 导	dkavvi
@@ -3277,6 +3289,7 @@ sort: by_weight
 棼	fnvvuo
 佛	fo
 佛	foiava
+匚	fp	va
 放	fp
 妨	fpa
 纺	fpaa
@@ -3616,6 +3629,7 @@ sort: by_weight
 垙	gcvoio
 珖	gcvv
 珖	gcvvio
+个	ge	iii
 各	ge
 隔	gea
 纥	geaa
@@ -5185,6 +5199,7 @@ sort: by_weight
 呇	io
 呇	ioaaoo
 就	j
+金	jb	ioo
 近	jb
 尽	jba
 缙	jbaa
@@ -5726,6 +5741,7 @@ sort: by_weight
 橛	jhvvuo
 珏	jhvvv
 珏	jhvvvv
+几	ji	u
 即	ji
 级	jia
 纪	jiaa
@@ -5965,6 +5981,7 @@ sort: by_weight
 䐃	jluiau
 坰	jlv
 坰	jlvoia
+九	jq	u
 久	jq
 纠	jqa
 纠	jqaaai
@@ -6946,6 +6963,7 @@ sort: by_weight
 𩾌	kpuaov
 𡐓	kpv
 𡐓	kpvoov
+口	kr	oo
 口	kr
 扣	kri
 眍	kria
@@ -7303,6 +7321,7 @@ sort: by_weight
 尥	ldvuua
 橑	ldvv
 橑	ldvvuo
+了	le	aii
 乐	le
 泐	lea
 泐	leaaia
@@ -7387,6 +7406,7 @@ sort: by_weight
 瑓	lfvvv
 琏	lfvvva
 瑓	lfvvvi
+〇	lg	oo
 另	lg
 灵	lga
 绫	lgaa
@@ -7496,6 +7516,7 @@ sort: by_weight
 来	lhvouv
 梾	lhvv
 梾	lhvvou
+力	li	a
 里	li
 隶	lia
 骊	liaa
@@ -8123,6 +8144,7 @@ sort: by_weight
 璐	luvvo
 璐	luvvoi
 麓	luvvov
+吕	lv	oo
 率	lv
 驴	lva
 缕	lvaa
@@ -8833,6 +8855,8 @@ sort: by_weight
 哞	mroaou
 谋	mroavi
 某	mrvivv
+沐	mu	a
+木	mu	vv
 目	mu
 母	mua
 母	muaaov
@@ -8941,6 +8965,7 @@ sort: by_weight
 瑂	mwvva
 瑂	mwvvai
 玫	mwvvuv
+乜	mx	a
 灭	mx
 蔑	mxi
 蠛	mxia
@@ -9067,6 +9092,7 @@ sort: by_weight
 聍	ngvioo
 柠	ngvo
 柠	ngvooa
+乃	nh	auu
 乃	nh
 奶	nha
 鼐	nhau
@@ -9692,6 +9718,7 @@ sort: by_weight
 脬	pkuuoo
 匏	pkv
 匏	pkvuua
+朋	pm	u
 碰	pm
 弸	pma
 澎	pmav
@@ -10279,6 +10306,7 @@ sort: by_weight
 碏	qhvuvi
 棤	qhvv
 棤	qhvvii
+七	qi	va
 其	qi
 骑	qia
 绮	qiaa
@@ -10829,6 +10857,7 @@ sort: by_weight
 热	reiuoo
 喏	reo
 喏	reoiiv
+日	ri	oii
 日	ri
 驲	ria
 驲	riaaoi
@@ -10900,6 +10929,7 @@ sort: by_weight
 扔	rmi
 仍	rmiauu
 扔	rmiuau
+人	rn	ii
 任	rn
 忍	rna
 纫	rnaa
@@ -10999,6 +11029,7 @@ sort: by_weight
 堧	rtvovu
 瓀	rtvv
 瓀	rtvvvo
+入	ru	u
 如	ru
 孺	rua
 缛	ruaa
@@ -11241,6 +11272,9 @@ sort: by_weight
 酾	shv
 酾	shvi
 酾	shvivi
+厶	si	ao
+十	si	uoo
+士	si	voo
 时	si
 始	sia
 丝	siaa
@@ -11369,6 +11403,7 @@ sort: by_weight
 施	siovuv
 凘	siovv
 凘	siovvi
+十	siu
 氏	siu
 饲	siua
 鲺	siuaa
@@ -11408,7 +11443,6 @@ sort: by_weight
 事	siv
 轼	siva
 轼	sivavv
-十	sivi
 肆	sivia
 贳	siviao
 事	siviav
@@ -11862,6 +11896,7 @@ sort: by_weight
 殇	spvu
 磉	spvuao
 殇	spvuuv
+手	sr	iuu
 受	sr
 收	sra
 绶	sraa
@@ -11948,6 +11983,7 @@ sort: by_weight
 栓	stvi
 酸	stviao
 栓	stvivv
+术	su	vo
 数	su
 书	sua
 纾	suaa
@@ -12092,6 +12128,7 @@ sort: by_weight
 琡	suvviv
 枢	suvvu
 枢	suvvuo
+水	sv	aa
 水	sv
 随	sva
 绥	svaa
@@ -12806,6 +12843,7 @@ sort: by_weight
 煓	ttouia
 猯	ttu
 猯	ttuaia
+土	tu	voo
 土	tu
 屠	tua
 涂	tuai
@@ -12878,6 +12916,7 @@ sort: by_weight
 铁	txiouv
 餮	txv
 餮	txvuio
+氽	ty	ia
 吞	ty
 臀	tya
 沌	tyav
@@ -12906,6 +12945,9 @@ sort: by_weight
 吞	tyvvoo
 们	u
 有	v
+厂	vj	vu
+儿	vu	u
+二	vu	vvv
 我	w
 挖	wa
 娃	waa
@@ -13699,6 +13741,7 @@ sort: by_weight
 咸	xfvuoo
 燹	xfvuou
 现	xfvvia
+杏	xg	vo
 行	xg
 姓	xga
 骍	xgaa
@@ -13996,6 +14039,7 @@ sort: by_weight
 胸	xluuau
 雄	xlv
 雄	xlvuio
+休	xq	i
 修	xq
 绣	xqa
 绣	xqaauv
@@ -14087,6 +14131,7 @@ sort: by_weight
 厦	xsvuvu
 瑕	xsvv
 瑕	xsvvav
+吅	xt	ooo
 选	xt
 绚	xta
 绚	xtaaua
@@ -14840,6 +14885,8 @@ sort: by_weight
 璎	ygvvao
 瑛	ygvvi
 瑛	ygvvii
+曰	yh	oii
+月	yh	uu
 月	yh
 约	yha
 约	yhaa
@@ -14884,6 +14931,10 @@ sort: by_weight
 樾	yhvvo
 樾	yhvvoi
 玥	yhvvuu
+乙	yi	aa
+亿	yi	ia
+乂	yi	uoo
+一	yi	vv
 以	yi
 已	yia
 驿	yiaa
@@ -15466,6 +15517,7 @@ sort: by_weight
 样	ypvouv
 殃	ypvu
 殃	ypvuia
+又	yr	a
 有	yr
 又	yra
 幼	yraa
@@ -16162,6 +16214,7 @@ sort: by_weight
 樾	yzvvoi
 玥	yzvvuu
 在	z
+札	za	vaa
 咋	za
 渣	zaa
 溠	zaao
@@ -17304,6 +17357,7 @@ sort: by_weight
 瑑	ztvv
 瑑	ztvvaa
 专	ztvvao
+术	zu	voo
 主	zu
 组	zua
 驻	zuaa
