更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -1,3 +1,4 @@
+
 ---
 name: xkyddz
 version: "Q1"
@@ -45,7 +46,6 @@ sort: by_weight
 疤	baov
 疤	baovai
 八	bau
-爸	bau
 鲅	baua
 鲃	bauaa
 鲃	bauaai
@@ -54,6 +54,7 @@ sort: by_weight
 鲅	bauavu
 魃	baui
 魃	bauivu
+爸	bauo
 爸	bauoai
 笆	bauv
 笆	bauvai
@@ -432,9 +433,9 @@ sort: by_weight
 扮	bjiuuo
 扳	bjiuuu
 搬	bjiuuu
-昄	bjo
+半	bjo
+昄	bjoi
 昄	bjoiuu
-半	bjou
 半	bjouvv
 瘢	bjov
 𨭉	bjovi
@@ -794,9 +795,8 @@ sort: by_weight
 糒	bwouvi
 庳	bwov
 庳	bwovui
-孛	bwu
-备	bwua
-狈	bwuaa
+备	bwu
+狈	bwua
 狈	bwuaao
 备	bwuaia
 惫	bwuao
@@ -806,6 +806,7 @@ sort: by_weight
 鹎	bwuiua
 卑	bwuiuo
 勃	bwuo
+孛	bwuoa
 孛	bwuoai
 勃	bwuoau
 杯	bwv
@@ -1061,11 +1062,12 @@ sort: by_weight
 齿	ciivia
 雌	ciivio
 此	ciivua
-嗤	cio
+次	cio
 词	cioa
 祠	cioaa
 词	cioaav
 祠	cioaav
+嗤	cioai
 嗤	cioaii
 褫	cioau
 褫	cioauu
@@ -1077,11 +1079,10 @@ sort: by_weight
 踟	cioiuv
 呲	cioiv
 呲	cioivi
-叱	ciou
+慈	ciou
 兹	cioua
 叱	ciouaa
 兹	ciouaa
-慈	ciouo
 慈	ciouoa
 炽	ciouou
 糍	ciouou
@@ -1090,13 +1091,12 @@ sort: by_weight
 差	ciouv
 吃	ciouva
 差	ciouvi
-哧	ciov
+痴	ciov
 疵	ciovi
 疵	cioviv
-啻	ciovo
+哧	ciovo
 啻	ciovoo
 哧	ciovou
-次	ciovu
 次	ciovua
 痴	ciovuv
 瘛	ciovv
@@ -1284,11 +1284,11 @@ sort: by_weight
 肏	ckuoia
 朝	ckuouu
 艚	ckuuvi
-𥕢	ckv
+超	ckv
 曹	ckvi
 曹	ckvioi
-超	ckvo
 超	ckvoau
+𥕢	ckvu
 𥕢	ckvuvi
 槽	ckvv
 耖	ckvvi
@@ -2345,7 +2345,7 @@ sort: by_weight
 殚	djvuou
 到	dk
 刀	dka
-导	dka
+导	dkav
 导	dkavvi
 捣	dki
 帱	dkia
@@ -2633,12 +2633,12 @@ sort: by_weight
 镀	duioov
 督	duiv
 督	duivia
-嘟	duo
+度	duo
 读	duoauo
 阇	duoi
 阇	duoiuo
+嘟	duou
 嘟	duouov
-度	duov
 度	duovao
 独	duu
 独	duuaia
@@ -2962,6 +2962,7 @@ sort: by_weight
 桉	ejvooa
 垵	ejvooo
 埯	ejvovu
+厂	ejvu
 鹌	ejvuua
 奥	ek
 媪	eka
@@ -3090,12 +3091,12 @@ sort: by_weight
 呒	euov
 咡	euovii
 呒	euovvu
-尔	euu
-饵	euua
+儿	euu
+尔	euua
 尔	euuaiu
 迩	euuao
 迩	euuaoa
-鲕	euuav
+饵	euuav
 饵	euuavi
 鲕	euuavu
 耳	euv
@@ -3108,6 +3109,7 @@ sort: by_weight
 珥	euvv
 贰	euvva
 贰	euvvao
+二	euvvv
 珥	euvvvi
 诶	ewo
 诶	ewoaao
@@ -3304,13 +3306,13 @@ sort: by_weight
 钫	fpioo
 钫	fpioov
 仿	fpiova
-访	fpo
-房	fpoa
+方	fpo
+访	fpoa
+房	fpoao
 房	fpoaov
 访	fpoaov
 昉	fpoi
 昉	fpoiov
-方	fpov
 邡	fpova
 邡	fpovai
 方	fpovau
@@ -3409,17 +3411,17 @@ sort: by_weight
 付	fuivio
 伏	fuivu
 伏	fuivuo
-咐	fuo
-福	fuoa
+福	fuo
 讣	fuoai
 讣	fuoaio
 袱	fuoaiv
 祓	fuoav
 福	fuoavo
 祓	fuoavu
-趺	fuoi
+咐	fuoi
 跗	fuoii
 跗	fuoiiv
+趺	fuoiv
 咐	fuoivi
 趺	fuoivv
 富	fuoo
@@ -3430,13 +3432,14 @@ sort: by_weight
 富	fuoovo
 㕮	fuou
 㕮	fuouou
-呒	fuov
+府	fuov
 鄜	fuova
 鄜	fuovai
 腐	fuovi
 腐	fuovia
 府	fuoviv
 呋	fuovv
+呒	fuovv
 呋	fuovvu
 呒	fuovvu
 负	fuu
@@ -3699,8 +3702,7 @@ sort: by_weight
 圪	gevouv
 哥	gevovo
 塥	gevovo
-硌	gevu
-格	gevua
+格	gevu
 格	gevuao
 硌	gevuu
 硌	gevuua
@@ -4426,8 +4428,9 @@ sort: by_weight
 贺	heauao
 河	heav
 河	heavoi
-荷	hei
-菏	heii
+何	hei
+荷	heii
+菏	heiia
 菏	heiiav
 荷	heiiiv
 龁	heiv
@@ -4435,7 +4438,6 @@ sort: by_weight
 郃	heivai
 盒	heivi
 盒	heivia
-何	heivo
 何	heivoi
 合	heivoo
 龢	heivu
@@ -4744,13 +4746,13 @@ sort: by_weight
 狠	hnuaav
 很	hnuuav
 或	ho
-彟	hoa
+活	hoa
 濩	hoai
 濩	hoaiii
 漷	hoao
 漷	hoaovo
-活	hoau
 活	hoauvi
+彟	hoav
 彟	hoavii
 获	hoi
 夥	hoia
@@ -4776,7 +4778,7 @@ sort: by_weight
 佸	hoiuv
 佸	hoiuvi
 攉	hoiuvo
-嚯	hoo
+火	hoo
 祸	hooa
 祸	hooaoi
 嚄	hooi
@@ -4784,9 +4786,9 @@ sort: by_weight
 豁	hooo
 豁	hooouo
 㸌	hoou
-火	hooui
 火	hoouii
 㸌	hoouvo
+嚯	hoov
 嚯	hoovoa
 和	hou
 和	houvoo
@@ -4822,11 +4824,11 @@ sort: by_weight
 珩	hpvv
 珩	hpvvuu
 后	hr
-骺	hri
+候	hri
 侯	hria
+骺	hriau
 骺	hriauu
 侯	hriavu
-候	hrii
 候	hriiav
 吼	hro
 吼	hroaiv
@@ -5043,8 +5045,8 @@ sort: by_weight
 猢	huuau
 猢	huuauo
 狐	huuauu
-鹕	huuo
-乎	huuou
+乎	huuo
+鹕	huuou
 鹕	huuoua
 胡	huuouu
 乎	huuouv
@@ -5278,7 +5280,7 @@ sort: by_weight
 琎	jbvvvu
 禁	jbvvvv
 将	jc
-降	jca
+江	jca
 缰	jcaa
 绛	jcaau
 绛	jcaaua
@@ -5287,12 +5289,10 @@ sort: by_weight
 降	jcaiua
 洚	jcau
 洚	jcauao
-弶	jcav
-江	jcavi
+犟	jcav
 江	jcaviv
-强	jcavoi
+强	jcavo
 弶	jcavov
-犟	jcavu
 犟	jcavuv
 疆	jcavv
 疆	jcavvi
@@ -5939,14 +5939,14 @@ sort: by_weight
 垍	jivoui
 楫	jivov
 楫	jivovi
-矶	jivu
-机	jivua
+机	jivu
 机	jivuaa
 殛	jivuai
 极	jivuao
 剞	jivui
 丌	jivuii
 剞	jivuii
+矶	jivuu
 矶	jivuua
 奇	jivuv
 奇	jivuvo
@@ -6007,13 +6007,13 @@ sort: by_weight
 疚	jqovua
 鹫	jqovua
 就	jqovvu
-鸠	jqu
 九	jqu
 咎	jqua
 灸	jquao
 久	jquaoo
 咎	jquaoo
 灸	jquaou
+鸠	jquau
 鸠	jquaua
 舅	jqui
 舅	jquiia
@@ -6737,13 +6737,12 @@ sort: by_weight
 咳	keoova
 炣	keou
 炣	keouvo
-疴	keov
-刻	keovi
+刻	keov
 刻	keovii
 呵	keovo
 嗑	keovoa
 呵	keovoi
-颏	keovv
+疴	keovv
 疴	keovvo
 颏	keovvu
 尅	keu
@@ -7573,12 +7572,13 @@ sort: by_weight
 俪	liivia
 傈	liivia
 例	liivua
-哩	lio
+立	lio
 礼	lioa
 礼	lioaaa
 戾	lioav
 戾	lioavu
 跞	lioi
+哩	lioia
 哩	lioiav
 跞	lioiu
 跞	lioiua
@@ -7591,7 +7591,6 @@ sort: by_weight
 喱	liov
 离	liovi
 离	liovia
-立	liovo
 立	liovou
 呖	liovu
 呖	liovua
@@ -7625,8 +7624,7 @@ sort: by_weight
 篥	liuvvi
 梨	liuvvv
 理	liv
-轹	liva
-李	livai
+李	liva
 李	livaiv
 朸	livau
 轹	livaua
@@ -7829,20 +7827,20 @@ sort: by_weight
 棱	lmvv
 棱	lmvvou
 咯	lo
-骡	loa
-骆	loaa
+洛	loa
+络	loaa
+骡	loaai
 骡	loaaia
-络	loaau
+骆	loaau
 络	loaaua
 骆	loaaua
 漯	loai
 漯	loaia
 漯	loaiav
-洛	loau
-泺	loaua
+泺	loau
 泺	loauai
 洛	loauao
-荦	loi
+落	loi
 罗	loia
 螺	loiai
 螺	loiaia
@@ -7851,10 +7849,10 @@ sort: by_weight
 罗	loiaua
 萝	loii
 倮	loiia
-落	loiiau
+落	loiiav
 倮	loiiav
 萝	loiiia
-蓏	loiiu
+荦	loiiu
 蓏	loiiuu
 荦	loiiuv
 锣	loio
@@ -7937,7 +7935,7 @@ sort: by_weight
 埌	lpvooa
 琅	lpvvoa
 六	lq
-陆	lqa
+流	lqa
 绺	lqaa
 骝	lqaau
 骝	lqaaua
@@ -7948,7 +7946,6 @@ sort: by_weight
 鎏	lqaoi
 鎏	lqaoio
 鹨	lqaoua
-流	lqaov
 流	lqaova
 浏	lqaovu
 溜	lqau
@@ -10395,20 +10392,19 @@ sort: by_weight
 凄	qiovva
 麒	qiovvi
 弃	qiovvu
-耆	qiu
+气	qiu
 鳍	qiua
 鳍	qiuauo
 鲯	qiuav
 鲯	qiuavi
-𨙸	qiuo
+脐	qiuo
 𨙸	qiuoa
 𨙸	qiuoai
+耆	qiuoo
 耆	qiuooi
-脐	qiuov
 脐	qiuovu
 颀	qiuu
 颀	qiuuvu
-气	qiuv
 乞	qiuva
 乞	qiuvaa
 迄	qiuvo
@@ -10417,13 +10413,12 @@ sort: by_weight
 气	qiuvva
 起	qiv
 七	qiva
-郪	qiva
 妻	qivaa
 郪	qivaai
 妻	qivaau
 杞	qivav
 杞	qivava
-綦	qivi
+其	qivi
 桤	qivia
 綦	qiviaa
 桤	qiviai
@@ -11357,7 +11352,7 @@ sort: by_weight
 侍	siivo
 仕	siivoo
 侍	siivov
-咝	sio
+实	sio
 试	sioa
 祀	sioaa
 咝	sioaaa
@@ -11383,7 +11378,6 @@ sort: by_weight
 时	sioivi
 是	sioivi
 室	sioo
-实	siooo
 实	sioooo
 恃	sioov
 室	sioova
@@ -11845,9 +11839,9 @@ sort: by_weight
 朔	soouuu
 槊	soouv
 槊	soouvv
-索	sou
+所	sou
+索	souo
 索	souoaa
-所	souu
 所	souuuu
 硕	sov
 梭	sova
@@ -11923,18 +11917,18 @@ sort: by_weight
 授	sriuu
 搜	sriuui
 授	sriuuo
-嗽	sro
-嗾	sroo
-守	sroov
+首	sro
+守	sroo
+嗾	sroov
 嗾	sroova
 守	sroovi
 嗖	srou
 嗖	srouiv
-首	srouu
 首	srouui
 兽	srouv
 兽	srouvo
 瘦	srov
+嗽	srovi
 嗽	srovia
 熟	srovo
 熟	srovoo
@@ -12114,7 +12108,7 @@ sort: by_weight
 甦	suviuv
 酥	suviuv
 术	suvo
-述	suvo
+述	suvoo
 述	suvooa
 梳	suvov
 梳	suvova
@@ -12454,7 +12448,7 @@ sort: by_weight
 媞	tiau
 媞	tiauoi
 屉	tiavvi
-擿	tii
+提	tii
 荑	tiii
 荑	tiiiv
 荑	tiiiva
@@ -12462,7 +12456,7 @@ sort: by_weight
 锑	tiioou
 倜	tiiu
 倜	tiiuav
-提	tiiuo
+擿	tiiuo
 提	tiiuoi
 擿	tiiuov
 体	tiiviu
@@ -12945,9 +12939,6 @@ sort: by_weight
 吞	tyvvoo
 们	u
 有	v
-厂	vjvu
-儿	vuu
-二	vuvvv
 我	w
 挖	wa
 娃	waa
@@ -13945,7 +13936,7 @@ sort: by_weight
 夕	xiua
 鳛	xiuaa
 鳛	xiuaao
-觿	xiuai
+系	xiuai
 觿	xiuaia
 系	xiuaiu
 饻	xiuao
@@ -13955,8 +13946,7 @@ sort: by_weight
 饩	xiuauv
 玺	xiuav
 玺	xiuavv
-鼷	xiui
-息	xiuio
+息	xiui
 息	xiuioa
 舄	xiuiu
 舄	xiuiua
@@ -14243,12 +14233,11 @@ sort: by_weight
 叙	xuiva
 叙	xuivao
 虚	xuivii
-吁	xuo
+许	xuo
 诩	xuoa
 谞	xuoaa
 谞	xuoaai
 诩	xuoaao
-许	xuoau
 许	xuoauv
 旴	xuoi
 煦	xuoio
@@ -14336,12 +14325,11 @@ sort: by_weight
 叙	xviva
 叙	xvivao
 虚	xvivii
-吁	xvo
+许	xvo
 诩	xvoa
 谞	xvoaa
 谞	xvoaai
 诩	xvoaao
-许	xvoau
 许	xvoauv
 旴	xvoi
 煦	xvoio
@@ -14751,9 +14739,9 @@ sort: by_weight
 野	yeiaa
 野	yeiaao
 曳	yeiavv
-邺	yeii
+业	yeii
+邺	yeiia
 邺	yeiiai
-业	yeiio
 业	yeiiou
 铘	yeio
 铘	yeiova
@@ -15063,7 +15051,7 @@ sort: by_weight
 熠	yioua
 熠	yiouao
 益	yiouia
-燚	yiouo
+义	yiouo
 义	yiouoo
 燚	yiouou
 咦	yiov
@@ -16656,7 +16644,7 @@ sort: by_weight
 稙	ziuvuo
 秩	ziuvuv
 致	ziv
-辎	ziva
+至	ziva
 郅	zivaa
 辎	zivaaa
 郅	zivaai
@@ -16678,10 +16666,9 @@ sort: by_weight
 职	ziviou
 酯	ziviu
 酯	ziviua
-埴	zivo
+志	zivo
 址	zivoi
 址	zivoiv
-志	zivoo
 志	zivooa
 趑	zivoov
 枳	zivou
@@ -16822,7 +16809,6 @@ sort: by_weight
 嘲	zkou
 啁	zkoua
 啁	zkouav
-唣	zkoui
 着	zkoui
 唣	zkouia
 着	zkouia
@@ -17097,10 +17083,10 @@ sort: by_weight
 汋	zoauao
 涿	zoav
 涿	zoavua
-捉	zoi
+作	zoi
 岞	zoia
 岞	zoiauv
-著	zoii
+坐	zoii
 茁	zoiia
 茁	zoiiai
 著	zoiiu
@@ -17112,7 +17098,7 @@ sort: by_weight
 䦃	zoioi
 镯	zoioia
 䦃	zoioii
-作	zoiu
+捉	zoiu
 拙	zoiua
 擢	zoiua
 拙	zoiuai
@@ -17145,10 +17131,10 @@ sort: by_weight
 嘬	zoooiv
 怍	zooou
 怍	zooouv
-灼	zoou
+着	zoou
 焯	zooui
-着	zoouia
 焯	zoouiv
+灼	zoouu
 灼	zoouua
 啄	zoov
 座	zoovi
@@ -17366,9 +17352,9 @@ sort: by_weight
 驻	zuaaov
 阻	zuai
 阻	zuaiia
-贮	zuao
+注	zuao
+贮	zuaoo
 贮	zuaooo
-注	zuaov
 注	zuaovv
 渚	zuau
 潴	zuaua
