--- a/rime/xkyddz.dict.yaml
+++ b/rime/xkyddz.dict.yaml
@@ -17,10 +17,8 @@ sort: by_weight
 岜	baiaa
 岜	baiaai
 蚆	baiaai
-罢	baiav
 罢	baiavo
 芭	baii
-芭	baiia
 芭	baiiai
 菝	baiii
 菝	baiiiu
@@ -43,12 +41,12 @@ sort: by_weight
 粑	baoua
 羓	baouai
 粑	baouai
-叭	baouo
 叭	baouoo
 疤	baov
 疤	baovai
-鲅	bau
-鲃	baua
+八	bau
+鲅	baua
+鲃	bauaa
 鲃	bauaai
 鲌	bauau
 鲌	bauaui
@@ -57,9 +55,9 @@ sort: by_weight
 魃	bauivu
 爸	bauo
 爸	bauoai
-胈	bauv
-笆	bauva
+笆	bauv
 笆	bauvai
+胈	bauvu
 胈	bauvua
 坝	bav
 靶	bavi
@@ -72,11 +70,12 @@ sort: by_weight
 耙	bavv
 耙	bavva
 耙	bavvai
-滨	bb
+宾	bb
 缤	bba
 缤	bbaaoo
 濒	bbai
 濒	bbaivi
+滨	bbao
 滨	bbaooa
 摈	bbi
 豳	bbia
@@ -88,9 +87,8 @@ sort: by_weight
 傧	bbiooa
 镔	bbiooo
 摈	bbiuoo
-宾	bbo
+斌	bbo
 宾	bbooui
-斌	bbov
 斌	bbovvv
 膑	bbu
 邠	bbuo
@@ -113,24 +111,23 @@ sort: by_weight
 骠	bdaa
 骉	bdaaa
 骉	bdaaaa
-骠	bdaav
 骠	bdaavi
 瀌	bdao
 瀌	bdaovu
 婊	bdauvv
-摽	bdi
+镖	bdi
 幖	bdia
 幖	bdiavi
 蔈	bdii
 藨	bdiio
 藨	bdiiov
 蔈	bdiivi
-镖	bdio
-镳	bdioo
+镳	bdio
 镳	bdioov
 儦	bdiov
 儦	bdiova
 镖	bdiovi
+摽	bdiu
 摽	bdiuvi
 彪	bdiv
 彪	bdivuu
@@ -175,24 +172,25 @@ sort: by_weight
 汴	bfaovi
 弁	bfaovu
 边	bfauoa
-抃	bfi
+便	bfi
 蝙	bfia
 蝙	bfiaoa
 苄	bfii
 萹	bfiio
 萹	bfiioa
 苄	bfiiov
+抃	bfiu
 抃	bfiuov
-便	bfiv
 便	bfivi
 便	bfivia
-昪	bfo
+变	bfo
 遍	bfoa
 扁	bfoai
 扁	bfoaia
 褊	bfoao
 褊	bfoaoa
 遍	bfoaoa
+昪	bfoi
 昪	bfoiao
 忭	bfoo
 忭	bfooov
@@ -200,14 +198,13 @@ sort: by_weight
 窆	bfoouo
 煸	bfou
 煸	bfouoa
-变	bfov
+辨	bfov
 辫	bfova
 辫	bfovaa
 变	bfovao
 卞	bfovi
 卞	bfovio
-辨	bfovo
-辩	bfovoa
+辩	bfovo
 辨	bfovou
 鳊	bfu
 鳊	bfuaoa
@@ -223,19 +220,18 @@ sort: by_weight
 砭	bfvuuo
 并	bg
 屏	bga
-屏	bgav
 屏	bgavou
 摒	bgi
 蛃	bgia
 蛃	bgiavi
 摒	bgiuav
-昺	bgo
+病	bgo
+昺	bgoi
 昺	bgoivi
 炳	bgou
 炳	bgouvi
 并	bgouvv
-病	bgov
-冰	bgova
+冰	bgov
 冰	bgovaa
 禀	bgovi
 禀	bgovia
@@ -257,15 +253,14 @@ sort: by_weight
 白	bh
 败	bha
 败	bhaouv
-摆	bhi
-捭	bhiu
+拜	bhi
+摆	bhiu
 伯	bhiui
 摆	bhiuia
 伯	bhiuia
 掰	bhiuu
 捭	bhiuui
 掰	bhiuuo
-拜	bhiuv
 拜	bhiuvv
 佰	bhiv
 佰	bhivui
@@ -298,7 +293,7 @@ sort: by_weight
 妣	biauv
 妣	biauva
 滗	biauvo
-弼	biav
+臂	biav
 嬖	biava
 沘	biavau
 嬖	biavau
@@ -307,8 +302,8 @@ sort: by_weight
 屄	biavoo
 襞	biavov
 辟	biavov
-臂	biavu
 臂	biavuu
+弼	biavv
 壁	biavv
 壁	biavvo
 弼	biavvu
@@ -370,6 +365,7 @@ sort: by_weight
 庇	biovva
 笔	biu
 鲾	biua
+匕	biua
 狴	biuav
 狴	biuava
 鲾	biuavo
@@ -436,9 +432,9 @@ sort: by_weight
 扮	bjiuuo
 扳	bjiuuu
 搬	bjiuuu
-昄	bjo
+半	bjo
+昄	bjoi
 昄	bjoiuu
-半	bjou
 半	bjouvv
 瘢	bjov
 𨭉	bjovi
@@ -515,6 +511,7 @@ sort: by_weight
 褒	bkovio
 包	bku
 饱	bkua
+勹	bkuaa
 包	bkuaav
 刨	bkuai
 刨	bkuaii
@@ -600,6 +597,7 @@ sort: by_weight
 檗	boavv
 檗	boavvv
 播	boi
+卜	boi
 嶓	boia
 嶓	boiauo
 菠	boii
@@ -721,6 +719,7 @@ sort: by_weight
 蔀	buii
 蔀	buiiov
 钚	buio
+卜	buioo
 钸	buiov
 堡	buiovo
 钸	buiovu
@@ -761,6 +760,7 @@ sort: by_weight
 贝	bwa
 陂	bwai
 陂	bwaiau
+贝	bwaoo
 鐾	bwav
 鐾	bwavio
 臂	bwavu
@@ -794,9 +794,8 @@ sort: by_weight
 糒	bwouvi
 庳	bwov
 庳	bwovui
-孛	bwu
-备	bwua
-狈	bwuaa
+备	bwu
+狈	bwua
 狈	bwuaao
 备	bwuaia
 惫	bwuao
@@ -806,6 +805,7 @@ sort: by_weight
 鹎	bwuiua
 卑	bwuiuo
 勃	bwuo
+孛	bwuoa
 孛	bwuoai
 勃	bwuoau
 杯	bwv
@@ -1061,11 +1061,12 @@ sort: by_weight
 齿	ciivia
 雌	ciivio
 此	ciivua
-嗤	cio
+次	cio
 词	cioa
 祠	cioaa
 词	cioaav
 祠	cioaav
+嗤	cioai
 嗤	cioaii
 褫	cioau
 褫	cioauu
@@ -1077,11 +1078,10 @@ sort: by_weight
 踟	cioiuv
 呲	cioiv
 呲	cioivi
-叱	ciou
+慈	ciou
 兹	cioua
 叱	ciouaa
 兹	ciouaa
-慈	ciouo
 慈	ciouoa
 炽	ciouou
 糍	ciouou
@@ -1090,13 +1090,12 @@ sort: by_weight
 差	ciouv
 吃	ciouva
 差	ciouvi
-哧	ciov
+痴	ciov
 疵	ciovi
 疵	cioviv
-啻	ciovo
+哧	ciovo
 啻	ciovoo
 哧	ciovou
-次	ciovu
 次	ciovua
 痴	ciovuv
 瘛	ciovv
@@ -1284,11 +1283,11 @@ sort: by_weight
 肏	ckuoia
 朝	ckuouu
 艚	ckuuvi
-𥕢	ckv
+超	ckv
 曹	ckvi
 曹	ckvioi
-超	ckvo
 超	ckvoau
+𥕢	ckvu
 𥕢	ckvuvi
 槽	ckvv
 耖	ckvvi
@@ -1312,6 +1311,7 @@ sort: by_weight
 虫	cliavi
 葱	clii
 苁	cliii
+从	cliii
 苁	cliiii
 茺	cliio
 茺	cliiov
@@ -1633,6 +1633,7 @@ sort: by_weight
 长	cpuvao
 场	cpv
 场	cpvoau
+厂	cpvu
 臧	cpvu
 臧	cpvuv
 臧	cpvuvi
@@ -1985,6 +1986,7 @@ sort: by_weight
 耷	davuv
 耷	davuvi
 掉	dd
+刁	dda
 屌	dda
 汈	ddaa
 汈	ddaavv
@@ -2110,6 +2112,7 @@ sort: by_weight
 腚	dgu
 腚	dguooa
 顶	dgv
+丁	dgvi
 酊	dgvi
 耵	dgviv
 耵	dgvivi
@@ -2140,6 +2143,7 @@ sort: by_weight
 垈	dhivv
 垈	dhivvo
 傣	dhivvv
+呆	dho
 呔	dho
 诒	dhoa
 诒	dhoaa
@@ -2339,7 +2343,8 @@ sort: by_weight
 石	djvuoo
 殚	djvuou
 到	dk
-导	dka
+刀	dka
+导	dkav
 导	dkavvi
 捣	dki
 帱	dkia
@@ -2627,12 +2632,12 @@ sort: by_weight
 镀	duioov
 督	duiv
 督	duivia
-嘟	duo
+度	duo
 读	duoauo
 阇	duoi
 阇	duoiuo
+嘟	duou
 嘟	duouov
-度	duov
 度	duovao
 独	duu
 独	duuaia
@@ -2956,6 +2961,7 @@ sort: by_weight
 桉	ejvooa
 垵	ejvooo
 埯	ejvovu
+厂	ejvu
 鹌	ejvuua
 奥	ek
 媪	eka
@@ -3084,12 +3090,12 @@ sort: by_weight
 呒	euov
 咡	euovii
 呒	euovvu
-尔	euu
-饵	euua
+儿	euu
+尔	euua
 尔	euuaiu
 迩	euuao
 迩	euuaoa
-鲕	euuav
+饵	euuav
 饵	euuavi
 鲕	euuavu
 耳	euv
@@ -3102,6 +3108,7 @@ sort: by_weight
 珥	euvv
 贰	euvva
 贰	euvvao
+二	euvvv
 珥	euvvvi
 诶	ewo
 诶	ewoaao
@@ -3290,21 +3297,21 @@ sort: by_weight
 防	fpai
 防	fpaiov
 妨	fpauov
-芳	fpi
+仿	fpi
 蚄	fpia
 蚄	fpiaov
+芳	fpii
 芳	fpiiov
-仿	fpio
 钫	fpioo
 钫	fpioov
 仿	fpiova
-昉	fpo
+方	fpo
 访	fpoa
 房	fpoao
 房	fpoaov
 访	fpoaov
+昉	fpoi
 昉	fpoiov
-方	fpov
 邡	fpova
 邡	fpovai
 方	fpovau
@@ -3320,6 +3327,7 @@ sort: by_weight
 牥	fpuv
 牥	fpuvov
 坊	fpv
+匚	fpva
 枋	fpvo
 坊	fpvoov
 枋	fpvova
@@ -3402,17 +3410,17 @@ sort: by_weight
 付	fuivio
 伏	fuivu
 伏	fuivuo
-咐	fuo
-福	fuoa
+福	fuo
 讣	fuoai
 讣	fuoaio
 袱	fuoaiv
 祓	fuoav
 福	fuoavo
 祓	fuoavu
-趺	fuoi
+咐	fuoi
 跗	fuoii
 跗	fuoiiv
+趺	fuoiv
 咐	fuoivi
 趺	fuoivv
 富	fuoo
@@ -3423,13 +3431,14 @@ sort: by_weight
 富	fuoovo
 㕮	fuou
 㕮	fuouou
-呒	fuov
+府	fuov
 鄜	fuova
 鄜	fuovai
 腐	fuovi
 腐	fuovia
 府	fuoviv
 呋	fuovv
+呒	fuovv
 呋	fuovvu
 呒	fuovvu
 负	fuu
@@ -3640,6 +3649,7 @@ sort: by_weight
 骼	geiaua
 虼	geiauv
 葛	geii
+个	geiii
 葛	geiioi
 铬	geio
 铬	geioua
@@ -3691,8 +3701,7 @@ sort: by_weight
 圪	gevouv
 哥	gevovo
 塥	gevovo
-硌	gevu
-格	gevua
+格	gevu
 格	gevuao
 硌	gevuu
 硌	gevuua
@@ -4418,8 +4427,9 @@ sort: by_weight
 贺	heauao
 河	heav
 河	heavoi
-荷	hei
-菏	heii
+何	hei
+荷	heii
+菏	heiia
 菏	heiiav
 荷	heiiiv
 龁	heiv
@@ -4427,7 +4437,6 @@ sort: by_weight
 郃	heivai
 盒	heivi
 盒	heivia
-何	heivo
 何	heivoi
 合	heivoo
 龢	heivu
@@ -4736,13 +4745,13 @@ sort: by_weight
 狠	hnuaav
 很	hnuuav
 或	ho
-彟	hoa
+活	hoa
 濩	hoai
 濩	hoaiii
 漷	hoao
 漷	hoaovo
-活	hoau
 活	hoauvi
+彟	hoav
 彟	hoavii
 获	hoi
 夥	hoia
@@ -4768,7 +4777,7 @@ sort: by_weight
 佸	hoiuv
 佸	hoiuvi
 攉	hoiuvo
-嚯	hoo
+火	hoo
 祸	hooa
 祸	hooaoi
 嚄	hooi
@@ -4776,9 +4785,9 @@ sort: by_weight
 豁	hooo
 豁	hooouo
 㸌	hoou
-火	hooui
 火	hoouii
 㸌	hoouvo
+嚯	hoov
 嚯	hoovoa
 和	hou
 和	houvoo
@@ -4814,11 +4823,11 @@ sort: by_weight
 珩	hpvv
 珩	hpvvuu
 后	hr
-骺	hri
+候	hri
 侯	hria
+骺	hriau
 骺	hriauu
 侯	hriavu
-候	hrii
 候	hriiav
 吼	hro
 吼	hroaiv
@@ -5035,8 +5044,8 @@ sort: by_weight
 猢	huuau
 猢	huuauo
 狐	huuauu
-鹕	huuo
-乎	huuou
+乎	huuo
+鹕	huuou
 鹕	huuoua
 胡	huuouu
 乎	huuouv
@@ -5224,6 +5233,7 @@ sort: by_weight
 锦	jbio
 今	jbioa
 今	jbioaa
+金	jbioo
 锦	jbioui
 噤	jbo
 谨	jboa
@@ -5269,7 +5279,7 @@ sort: by_weight
 琎	jbvvvu
 禁	jbvvvv
 将	jc
-降	jca
+江	jca
 缰	jcaa
 绛	jcaau
 绛	jcaaua
@@ -5278,12 +5288,10 @@ sort: by_weight
 降	jcaiua
 洚	jcau
 洚	jcauao
-弶	jcav
-江	jcavi
+犟	jcav
 江	jcaviv
-强	jcavoi
+强	jcavo
 弶	jcavov
-犟	jcavu
 犟	jcavuv
 疆	jcavv
 疆	jcavvi
@@ -5864,6 +5872,7 @@ sort: by_weight
 脊	jiovuu
 疾	jiovuv
 几	jiu
+几	jiu
 急	jiua
 鲫	jiuaa
 鱾	jiuaav
@@ -5929,14 +5938,14 @@ sort: by_weight
 垍	jivoui
 楫	jivov
 楫	jivovi
-矶	jivu
-机	jivua
+机	jivu
 机	jivuaa
 殛	jivuai
 极	jivuao
 剞	jivui
 丌	jivuii
 剞	jivuii
+矶	jivuu
 矶	jivuua
 奇	jivuv
 奇	jivuvo
@@ -5997,12 +6006,13 @@ sort: by_weight
 疚	jqovua
 鹫	jqovua
 就	jqovvu
-鸠	jqu
+九	jqu
 咎	jqua
 灸	jquao
 久	jquaoo
 咎	jquaoo
 灸	jquaou
+鸠	jquau
 鸠	jquaua
 舅	jqui
 舅	jquiia
@@ -6726,13 +6736,12 @@ sort: by_weight
 咳	keoova
 炣	keou
 炣	keouvo
-疴	keov
-刻	keovi
+刻	keov
 刻	keovii
 呵	keovo
 嗑	keovoa
 呵	keovoi
-颏	keovv
+疴	keovv
 疴	keovvo
 颏	keovvu
 尅	keu
@@ -6965,6 +6974,7 @@ sort: by_weight
 抠	kriuvu
 叩	kro
 叩	kroaii
+口	kroo
 寇	kroo
 寇	kroovv
 筘	kru
@@ -7312,6 +7322,7 @@ sort: by_weight
 乐	le
 泐	lea
 泐	leaaia
+了	leaii
 仂	lei
 仂	leiauu
 叻	leo
@@ -7444,6 +7455,7 @@ sort: by_weight
 昤	lgoi
 昤	lgoiio
 呤	lgoioa
+〇	lgoo
 㥄	lgoo
 㥄	lgoovo
 羚	lgou
@@ -7503,6 +7515,7 @@ sort: by_weight
 梾	lhvv
 梾	lhvvou
 里	li
+力	lia
 隶	lia
 骊	liaa
 蠡	liaai
@@ -7558,12 +7571,13 @@ sort: by_weight
 俪	liivia
 傈	liivia
 例	liivua
-哩	lio
+立	lio
 礼	lioa
 礼	lioaaa
 戾	lioav
 戾	lioavu
 跞	lioi
+哩	lioia
 哩	lioiav
 跞	lioiu
 跞	lioiua
@@ -7576,7 +7590,6 @@ sort: by_weight
 喱	liov
 离	liovi
 离	liovia
-立	liovo
 立	liovou
 呖	liovu
 呖	liovua
@@ -7610,8 +7623,7 @@ sort: by_weight
 篥	liuvvi
 梨	liuvvv
 理	liv
-轹	liva
-李	livai
+李	liva
 李	livaiv
 朸	livau
 轹	livaua
@@ -7814,20 +7826,20 @@ sort: by_weight
 棱	lmvv
 棱	lmvvou
 咯	lo
-骡	loa
-骆	loaa
+洛	loa
+络	loaa
+骡	loaai
 骡	loaaia
-络	loaau
+骆	loaau
 络	loaaua
 骆	loaaua
 漯	loai
 漯	loaia
 漯	loaiav
-洛	loau
-泺	loaua
+泺	loau
 泺	loauai
 洛	loauao
-荦	loi
+落	loi
 罗	loia
 螺	loiai
 螺	loiaia
@@ -7836,10 +7848,10 @@ sort: by_weight
 罗	loiaua
 萝	loii
 倮	loiia
-落	loiiau
+落	loiiav
 倮	loiiav
 萝	loiiia
-蓏	loiiu
+荦	loiiu
 蓏	loiiuu
 荦	loiiuv
 锣	loio
@@ -7922,7 +7934,7 @@ sort: by_weight
 埌	lpvooa
 琅	lpvvoa
 六	lq
-陆	lqa
+流	lqa
 绺	lqaa
 骝	lqaau
 骝	lqaaua
@@ -7933,7 +7945,6 @@ sort: by_weight
 鎏	lqaoi
 鎏	lqaoio
 鹨	lqaoua
-流	lqaov
 流	lqaova
 浏	lqaovu
 溜	lqau
@@ -8157,6 +8168,7 @@ sort: by_weight
 褛	lvoaou
 闾	lvoi
 闾	lvoioo
+吕	lvoo
 膂	lvov
 率	lvovaa
 膂	lvovuu
@@ -8841,6 +8853,7 @@ sort: by_weight
 某	mrvivv
 目	mu
 母	mua
+沐	mua
 母	muaaov
 牟	muao
 牟	muaouv
@@ -8887,6 +8900,7 @@ sort: by_weight
 模	muviio
 坶	muvo
 坶	muvoaa
+木	muvv
 每	mw
 妹	mwa
 湄	mwaa
@@ -8948,6 +8962,7 @@ sort: by_weight
 瑂	mwvvai
 玫	mwvvuv
 灭	mx
+乜	mxa
 蔑	mxi
 蠛	mxia
 蠛	mxiaii
@@ -9078,6 +9093,7 @@ sort: by_weight
 鼐	nhau
 奶	nhauau
 鼐	nhauia
+乃	nhauu
 艿	nhi
 萘	nhii
 艿	nhiiau
@@ -9723,6 +9739,7 @@ sort: by_weight
 烹	pmov
 烹	pmovoo
 嘭	pmovoo
+朋	pmu
 鹏	pmu
 鹏	pmuuua
 膨	pmuv
@@ -10374,20 +10391,19 @@ sort: by_weight
 凄	qiovva
 麒	qiovvi
 弃	qiovvu
-耆	qiu
+气	qiu
 鳍	qiua
 鳍	qiuauo
 鲯	qiuav
 鲯	qiuavi
-𨙸	qiuo
+脐	qiuo
 𨙸	qiuoa
 𨙸	qiuoai
+耆	qiuoo
 耆	qiuooi
-脐	qiuov
 脐	qiuovu
 颀	qiuu
 颀	qiuuvu
-气	qiuv
 乞	qiuva
 乞	qiuvaa
 迄	qiuvo
@@ -10395,13 +10411,13 @@ sort: by_weight
 憩	qiuvoa
 气	qiuvva
 起	qiv
-郪	qiva
+七	qiva
 妻	qivaa
 郪	qivaai
 妻	qivaau
 杞	qivav
 杞	qivava
-綦	qivi
+其	qivi
 桤	qivia
 綦	qiviaa
 桤	qiviai
@@ -10840,6 +10856,7 @@ sort: by_weight
 驲	riaaoi
 䒤	rii
 䒤	riiioi
+日	rioii
 然	rj
 染	rja
 染	rjauvv
@@ -10920,6 +10937,7 @@ sort: by_weight
 荏	rni
 仞	rnia
 仞	rniauo
+人	rnii
 葚	rnii
 荏	rniiiu
 葚	rniiv
@@ -11040,6 +11058,7 @@ sort: by_weight
 襦	ruoavo
 褥	ruoavu
 嚅	ruovoa
+入	ruu
 入	ruu
 乳	ruuo
 乳	ruuoaa
@@ -11266,6 +11285,7 @@ sort: by_weight
 泗	siaiau
 浉	siaiuv
 湿	siao
+厶	siao
 湜	siaoi
 湿	siaoii
 湜	siaoiv
@@ -11331,7 +11351,7 @@ sort: by_weight
 侍	siivo
 仕	siivoo
 侍	siivov
-咝	sio
+实	sio
 试	sioa
 祀	sioaa
 咝	sioaaa
@@ -11357,7 +11377,6 @@ sort: by_weight
 时	sioivi
 是	sioivi
 室	sioo
-实	siooo
 实	sioooo
 恃	sioov
 室	sioova
@@ -11375,6 +11394,7 @@ sort: by_weight
 施	siovuv
 凘	siovv
 凘	siovvi
+十	siu
 氏	siu
 饲	siua
 鲺	siuaa
@@ -11394,6 +11414,7 @@ sort: by_weight
 鼫	siuivu
 释	siuo
 释	siuoao
+十	siuoo
 弑	siuov
 弑	siuovv
 虒	siuu
@@ -11414,7 +11435,6 @@ sort: by_weight
 事	siv
 轼	siva
 轼	sivavv
-十	sivi
 肆	sivia
 贳	siviao
 事	siviav
@@ -11433,6 +11453,7 @@ sort: by_weight
 螫	sivoi
 螫	sivoia
 埘	sivoo
+士	sivoo
 埘	sivooi
 寺	sivov
 柿	sivovi
@@ -11801,7 +11822,6 @@ sort: by_weight
 铄	soioua
 搠	soiuou
 些	soiv
-些	soivv
 些	soivvv
 唆	soo
 唆	sooaou
@@ -11818,9 +11838,9 @@ sort: by_weight
 朔	soouuu
 槊	soouv
 槊	soouvv
-索	sou
+所	sou
+索	souo
 索	souoaa
-所	souu
 所	souuuu
 硕	sov
 梭	sova
@@ -11892,21 +11912,22 @@ sort: by_weight
 搜	sriu
 擞	sriuo
 擞	sriuou
+手	sriuu
 授	sriuu
 搜	sriuui
 授	sriuuo
-嗽	sro
-嗾	sroo
-守	sroov
+首	sro
+守	sroo
+嗾	sroov
 嗾	sroova
 守	sroovi
 嗖	srou
 嗖	srouiv
-首	srouu
 首	srouui
 兽	srouv
 兽	srouvo
 瘦	srov
+嗽	srovi
 嗽	srovia
 熟	srovo
 熟	srovoo
@@ -12085,7 +12106,8 @@ sort: by_weight
 酥	suviu
 甦	suviuv
 酥	suviuv
-述	suvo
+术	suvo
+述	suvoo
 述	suvooa
 梳	suvov
 梳	suvova
@@ -12101,6 +12123,7 @@ sort: by_weight
 枢	suvvuo
 水	sv
 随	sva
+水	svaa
 绥	svaa
 绥	svaauo
 祟	svai
@@ -12251,8 +12274,8 @@ sort: by_weight
 龆	tdiv
 龆	tdivau
 跳	tdo
-祧	tdoa
-调	tdoau
+调	tdoa
+祧	tdoau
 调	tdoaua
 祧	tdoauo
 跳	tdoiuo
@@ -12424,7 +12447,7 @@ sort: by_weight
 媞	tiau
 媞	tiauoi
 屉	tiavvi
-擿	tii
+提	tii
 荑	tiii
 荑	tiiiv
 荑	tiiiva
@@ -12432,7 +12455,7 @@ sort: by_weight
 锑	tiioou
 倜	tiiu
 倜	tiiuav
-提	tiiuo
+擿	tiiuo
 提	tiiuoi
 擿	tiiuov
 体	tiiviu
@@ -12853,6 +12876,7 @@ sort: by_weight
 酴	tuviiv
 梌	tuvivv
 堍	tuvo
+土	tuvoo
 堍	tuvoua
 㻬	tuvv
 㻬	tuvvvo
@@ -12891,6 +12915,7 @@ sort: by_weight
 沌	tyavai
 臀	tyavuu
 囤	tyi
+氽	tyia
 囤	tyiava
 暾	tyo
 褪	tyoa
@@ -12912,7 +12937,6 @@ sort: by_weight
 坉	tyvova
 吞	tyvvoo
 们	u
-而	v
 有	v
 我	w
 挖	wa
@@ -13751,6 +13775,7 @@ sort: by_weight
 形	xgv
 醒	xgvi
 醒	xgvioi
+杏	xgvo
 幸	xgvo
 幸	xgvoou
 硎	xgvu
@@ -13910,7 +13935,7 @@ sort: by_weight
 夕	xiua
 鳛	xiuaa
 鳛	xiuaao
-觿	xiuai
+系	xiuai
 觿	xiuaia
 系	xiuaiu
 饻	xiuao
@@ -13920,8 +13945,7 @@ sort: by_weight
 饩	xiuauv
 玺	xiuav
 玺	xiuavv
-鼷	xiui
-息	xiuio
+息	xiui
 息	xiuioa
 舄	xiuiu
 舄	xiuiua
@@ -14011,6 +14035,7 @@ sort: by_weight
 滫	xqaiua
 溴	xqau
 溴	xqauia
+休	xqi
 岫	xqi
 䗛	xqia
 岫	xqiaia
@@ -14134,6 +14159,7 @@ sort: by_weight
 昡	xtoiov
 晅	xtoivo
 宣	xtoo
+吅	xtooo
 愃	xtooo
 喧	xtoooa
 愃	xtoooo
@@ -14206,12 +14232,11 @@ sort: by_weight
 叙	xuiva
 叙	xuivao
 虚	xuivii
-吁	xuo
+许	xuo
 诩	xuoa
 谞	xuoaa
 谞	xuoaai
 诩	xuoaao
-许	xuoau
 许	xuoauv
 旴	xuoi
 煦	xuoio
@@ -14299,12 +14324,11 @@ sort: by_weight
 叙	xviva
 叙	xvivao
 虚	xvivii
-吁	xvo
+许	xvo
 诩	xvoa
 谞	xvoaa
 谞	xvoaai
 诩	xvoaao
-许	xvoau
 许	xvoauv
 旴	xvoi
 煦	xvoio
@@ -14388,7 +14412,8 @@ sort: by_weight
 挟	xxiuvo
 撷	xxiuvo
 揳	xxiuvv
-偕	xxiv
+些	xxiv
+偕	xxiva
 偕	xxivau
 斜	xxivo
 斜	xxivoo
@@ -14713,9 +14738,9 @@ sort: by_weight
 野	yeiaa
 野	yeiaao
 曳	yeiavv
-邺	yeii
+业	yeii
+邺	yeiia
 邺	yeiiai
-业	yeiio
 业	yeiiou
 铘	yeio
 铘	yeiova
@@ -14866,6 +14891,7 @@ sort: by_weight
 曰	yhoi
 哕	yhoia
 哕	yhoiai
+曰	yhoii
 阅	yhoio
 阅	yhoiou
 跃	yhoiuv
@@ -14881,6 +14907,7 @@ sort: by_weight
 岳	yhuiia
 刖	yhuiii
 粤	yhuiva
+月	yhuu
 籥	yhuv
 籥	yhuviv
 越	yhv
@@ -14893,6 +14920,7 @@ sort: by_weight
 玥	yhvvuu
 以	yi
 已	yia
+乙	yiaa
 驿	yiaa
 绎	yiaaa
 绎	yiaaao
@@ -14932,6 +14960,7 @@ sort: by_weight
 尾	yiavuv
 异	yiavvu
 抑	yii
+亿	yiia
 屹	yiia
 峄	yiiaa
 眙	yiiaao
@@ -15021,7 +15050,7 @@ sort: by_weight
 熠	yioua
 熠	yiouao
 益	yiouia
-燚	yiouo
+义	yiouo
 义	yiouoo
 燚	yiouou
 咦	yiov
@@ -15063,6 +15092,7 @@ sort: by_weight
 臆	yiuo
 刈	yiuoi
 刈	yiuoii
+乂	yiuoo
 鹢	yiuoua
 臆	yiuovo
 役	yiuu
@@ -15112,6 +15142,7 @@ sort: by_weight
 殪	yivuv
 殪	yivuvo
 医	yivuvv
+一	yivv
 椅	yivv
 杙	yivva
 杙	yivvao
@@ -15474,6 +15505,7 @@ sort: by_weight
 殃	ypvu
 殃	ypvuia
 有	yr
+又	yra
 又	yra
 幼	yraa
 幼	yraaau
@@ -16235,6 +16267,7 @@ sort: by_weight
 乍	zauviv
 匝	zav
 轧	zava
+札	zavaa
 轧	zavaaa
 匝	zaviai
 榨	zavo
@@ -16564,7 +16597,7 @@ sort: by_weight
 庤	ziovvo
 痔	ziovvo
 痣	ziovvo
-疐	ziu
+自	ziu
 旨	ziua
 鲻	ziuaa
 鲻	ziuaaa
@@ -16574,7 +16607,6 @@ sort: by_weight
 觯	ziuaou
 氏	ziuav
 氏	ziuava
-自	ziui
 自	ziuiav
 支	ziuo
 𨙸	ziuoa
@@ -16611,7 +16643,7 @@ sort: by_weight
 稙	ziuvuo
 秩	ziuvuv
 致	ziv
-辎	ziva
+至	ziva
 郅	zivaa
 辎	zivaaa
 郅	zivaai
@@ -16633,10 +16665,9 @@ sort: by_weight
 职	ziviou
 酯	ziviu
 酯	ziviua
-埴	zivo
+志	zivo
 址	zivoi
 址	zivoiv
-志	zivoo
 志	zivooa
 趑	zivoov
 枳	zivou
@@ -16763,9 +16794,9 @@ sort: by_weight
 肇	zkoaa
 诏	zkoaau
 肇	zkoaav
-昭	zkoi
+躁	zkoi
+昭	zkoia
 昭	zkoiau
-躁	zkoio
 躁	zkoioo
 照	zkoioo
 曌	zkoioo
@@ -16774,13 +16805,12 @@ sort: by_weight
 噪	zkoooo
 慥	zkoou
 慥	zkoouv
-唣	zkou
+嘲	zkou
 啁	zkoua
 啁	zkouav
 着	zkoui
 唣	zkouia
 着	zkouia
-嘲	zkouo
 嘲	zkouoo
 燥	zkouoo
 糟	zkouv
@@ -17052,10 +17082,10 @@ sort: by_weight
 汋	zoauao
 涿	zoav
 涿	zoavua
-捉	zoi
+作	zoi
 岞	zoia
 岞	zoiauv
-著	zoii
+坐	zoii
 茁	zoiia
 茁	zoiiai
 著	zoiiu
@@ -17067,7 +17097,8 @@ sort: by_weight
 䦃	zoioi
 镯	zoioia
 䦃	zoioii
-拙	zoiu
+捉	zoiu
+拙	zoiua
 擢	zoiua
 拙	zoiuai
 擢	zoiuao
@@ -17076,7 +17107,6 @@ sort: by_weight
 捉	zoiuoi
 做	zoiuoo
 捽	zoiuov
-作	zoiuv
 作	zoiuvi
 桌	zoiv
 卓	zoivu
@@ -17100,10 +17130,10 @@ sort: by_weight
 嘬	zoooiv
 怍	zooou
 怍	zooouv
-灼	zoou
+着	zoou
 焯	zooui
-着	zoouia
 焯	zoouiv
+灼	zoouu
 灼	zoouua
 啄	zoov
 座	zoovi
@@ -17321,9 +17351,9 @@ sort: by_weight
 驻	zuaaov
 阻	zuai
 阻	zuaiia
-贮	zuao
+注	zuao
+贮	zuaoo
 贮	zuaooo
-注	zuaov
 注	zuaovv
 渚	zuau
 潴	zuaua
@@ -17432,6 +17462,7 @@ sort: by_weight
 柷	zuvo
 槠	zuvoa
 槠	zuvoau
+术	zuvoo
 柷	zuvoua
 柱	zuvov
 柱	zuvovv
