--- a/rime/xkyddz.dict.yaml
+++ b/rime/xkyddz.dict.yaml
@@ -887,18 +887,18 @@ sort: by_weight
 刹	cauoi
 岔	cauoia
 刹	cauoii
-碴	cav
+查	cav
 杈	cava
 杈	cavaoo
 垞	cavo
-查	cavoi
 查	cavoiv
 檫	cavoo
 檫	cavooa
 垞	cavooo
 槎	cavou
 槎	cavouv
-礤	cavu
+碴	cavu
+礤	cavui
 礤	cavuii
 碴	cavuvo
 楂	cavv
@@ -910,15 +910,15 @@ sort: by_weight
 创	cciaii
 幢	cciao
 幢	cciaov
-噇	cco
+床	cco
 闯	ccoi
 闯	ccoiaa
-怆	ccoo
+噇	ccoo
+怆	ccooi
 怆	ccooia
 窗	ccooui
 噇	ccoovo
-床	ccov
-疮	ccovi
+疮	ccov
 疮	ccovia
 床	ccovvv
 车	ce
@@ -941,9 +941,9 @@ sort: by_weight
 册	ceuaua
 彻	ceuu
 彻	ceuuva
-掣	ceuv
+策	ceuv
+掣	ceuvi
 掣	ceuviu
-策	ceuvv
 策	ceuvvi
 砗	cev
 车	cevavi
@@ -2113,7 +2113,6 @@ sort: by_weight
 腚	dguooa
 顶	dgv
 丁	dgvi
-酊	dgvi
 耵	dgviv
 耵	dgvivi
 酊	dgvivi
@@ -2236,7 +2235,7 @@ sort: by_weight
 遆	diovo
 遆	diovoa
 底	diovua
-觌	diu
+第	diu
 氐	diua
 邸	diuaa
 邸	diuaai
@@ -2244,14 +2243,14 @@ sort: by_weight
 狄	diuaou
 氐	diuava
 的	diuiua
-籴	diuo
+觌	diuo
 觌	diuoia
+籴	diuoo
 籴	diuoou
-第	diuv
+敌	diuv
 第	diuvav
 笛	diuvi
 笛	diuvia
-敌	diuvu
 敌	diuvuv
 堤	div
 棣	diva
@@ -3250,12 +3249,12 @@ sort: by_weight
 𣸣	fnauo
 汾	fnauoa
 𣸣	fnauoi
-芬	fni
-棻	fnii
+份	fni
+芬	fnii
 芬	fniiuo
+棻	fniiv
 棻	fniivv
-份	fniu
-偾	fniuo
+偾	fniu
 份	fniuoa
 偾	fniuov
 吩	fno
@@ -3306,8 +3305,8 @@ sort: by_weight
 钫	fpioov
 仿	fpiova
 方	fpo
-访	fpoa
-房	fpoao
+房	fpoa
+访	fpoao
 房	fpoaov
 访	fpoaov
 昉	fpoi
@@ -3612,9 +3611,9 @@ sort: by_weight
 潢	gcav
 潢	gcavii
 光	gcioua
-咣	gco
+广	gco
+咣	gcoi
 咣	gcoiou
-广	gcov
 广	gcovu
 广	gcovuu
 逛	gcu
@@ -3693,12 +3692,13 @@ sort: by_weight
 戈	gevauo
 革	gevi
 革	geviia
-塥	gevo
+歌	gevo
 鬲	gevoi
 鬲	gevoia
 圪	gevou
 歌	gevoua
 圪	gevouv
+塥	gevov
 哥	gevovo
 塥	gevovo
 格	gevu
@@ -3734,10 +3734,10 @@ sort: by_weight
 荄	ghiiov
 钙	ghio
 钙	ghiovi
-晐	gho
+盖	gho
 该	ghoaov
+晐	ghoi
 晐	ghoiov
-盖	ghou
 盖	ghouia
 概	ghv
 概	ghvavv
@@ -3854,9 +3854,9 @@ sort: by_weight
 拱	gliuvi
 供	gliv
 供	glivii
-唝	glo
-宫	gloo
+宫	glo
 宫	gloooo
+唝	glov
 唝	gloviv
 公	glu
 觥	glua
@@ -4974,7 +4974,7 @@ sort: by_weight
 𤩽	htvvuo
 环	htvvvu
 户	hu
-弧	hua
+湖	hua
 滹	huai
 滹	huaiva
 沪	huao
@@ -4985,8 +4985,8 @@ sort: by_weight
 淴	huaua
 淴	huauau
 嫭	huauiv
-湖	huauo
 湖	huauoo
+弧	huav
 弧	huavuu
 护	hui
 囫	huia
@@ -5034,7 +5034,7 @@ sort: by_weight
 冱	huov
 冱	huovva
 胡	huu
-鹱	huua
+忽	huua
 鳠	huuai
 鹱	huuaii
 鳠	huuaii
@@ -5268,7 +5268,8 @@ sort: by_weight
 墐	jbvovi
 殣	jbvu
 殣	jbvuvi
-珒	jbvv
+禁	jbvv
+珒	jbvva
 珒	jbvvav
 槿	jbvvi
 槿	jbvvii
@@ -5468,7 +5469,7 @@ sort: by_weight
 健	jfiav
 健	jfiavv
 荐	jfii
-茧	jfiii
+监	jfiii
 监	jfiiia
 茧	jfiiia
 鉴	jfiiio
@@ -5529,7 +5530,7 @@ sort: by_weight
 兼	jfouva
 减	jfov
 减	jfovvu
-毽	jfu
+简	jfu
 饯	jfua
 鲣	jfuai
 鲣	jfuaii
@@ -5540,14 +5541,13 @@ sort: by_weight
 腱	jfuavv
 舰	jfuu
 舰	jfuuia
-犍	jfuv
+毽	jfuv
 犍	jfuva
 犍	jfuvav
 毽	jfuvav
 笕	jfuvi
 笕	jfuvia
 篯	jfuvio
-简	jfuvo
 简	jfuvoi
 箭	jfuvou
 笺	jfuvv
@@ -5872,7 +5872,6 @@ sort: by_weight
 脊	jiovuu
 疾	jiovuv
 几	jiu
-几	jiu
 急	jiua
 鲫	jiuaa
 鱾	jiuaav
@@ -5898,12 +5897,11 @@ sort: by_weight
 肌	jiuuaa
 徛	jiuuv
 徛	jiuuvu
-犄	jiuv
+积	jiuv
 季	jiuva
 季	jiuvai
 稷	jiuvi
 稷	jiuvia
-积	jiuvo
 积	jiuvou
 笈	jiuvu
 笈	jiuvua
@@ -6048,7 +6046,7 @@ sort: by_weight
 叚	jsaviv
 浃	jsavo
 浃	jsavou
-拮	jsi
+假	jsi
 甲	jsia
 岬	jsiai
 岬	jsiaia
@@ -6058,7 +6056,7 @@ sort: by_weight
 假	jsiavi
 蛱	jsiavo
 甲	jsiavv
-茄	jsii
+价	jsii
 葭	jsiia
 茄	jsiiau
 葭	jsiiav
@@ -6243,12 +6241,11 @@ sort: by_weight
 炬	juouva
 疽	juov
 疽	juovia
-榘	juu
+句	juu
 腒	juua
 飓	juuai
 狙	juuaia
 飓	juuaia
-句	juuao
 句	juuaoo
 腒	juuavu
 犋	juuv
@@ -6488,16 +6485,14 @@ sort: by_weight
 疥	jxovi
 疥	jxoviu
 竭	jxovoi
-劼	jxu
+街	jxu
 鲒	jxua
 解	jxuaau
 桀	jxuav
 鲒	jxuavo
 桀	jxuavv
 截	jxuo
-劼	jxuoau
 截	jxuoio
-街	jxuu
 街	jxuuvo
 秸	jxuv
 秸	jxuvvo
@@ -6506,6 +6501,7 @@ sort: by_weight
 杰	jxvo
 劫	jxvoa
 劫	jxvoau
+劼	jxvoau
 杰	jxvooo
 颉	jxvov
 颉	jxvovu
@@ -6898,11 +6894,11 @@ sort: by_weight
 空	kloovi
 箜	klu
 箜	kluvoo
-硿	klv
-恐	klvi
+恐	klv
 恐	klvioa
 埪	klvo
 埪	klvooo
+硿	klvu
 硿	klvuoo
 坑	km
 铿	kmi
@@ -7648,8 +7644,8 @@ sort: by_weight
 雳	livov
 坜	livovu
 雳	livovu
-砺	livu
-栎	livua
+历	livu
+励	livua
 栎	livuai
 历	livuau
 励	livuau
@@ -7659,8 +7655,7 @@ sort: by_weight
 砬	livuov
 砾	livuu
 砾	livuua
-㰀	livuv
-厉	livuva
+厉	livuv
 㰀	livuvi
 砺	livuvu
 珕	livv
@@ -8512,7 +8507,7 @@ sort: by_weight
 蘼	miiiov
 芈	miiv
 芈	miivvv
-咪	mio
+密	mio
 谜	mioa
 幂	mioai
 幂	mioaia
@@ -8522,11 +8517,11 @@ sort: by_weight
 谜	mioaou
 祢	mioau
 祢	mioaua
-嘧	mioo
-密	miooi
+咪	mioo
 密	miooia
 蜜	miooia
 宓	miooo
+嘧	miooo
 宓	mioooa
 嘧	mioooa
 咪	mioouv
@@ -8543,13 +8538,13 @@ sort: by_weight
 糜	miovo
 糜	miovou
 麋	miovou
-脒	miu
+秘	miu
 猕	miua
 猕	miuaav
 觅	miuo
 觅	miuoia
+脒	miuou
 脒	miuouv
-秘	miuv
 秘	miuvoa
 醚	miv
 醾	mivi
@@ -8789,11 +8784,10 @@ sort: by_weight
 貊	mouovu
 秣	mouv
 秣	mouvvv
-万	mov
+模	mov
 万	mova
 万	movauu
 靺	movi
-模	movii
 模	moviio
 靺	movivv
 殁	movu
@@ -9163,13 +9157,13 @@ sort: by_weight
 婻	nja
 难	njaoio
 婻	njauuo
-萳	nji
-男	njia
+男	nji
 囡	njiaa
 囡	njiaau
 男	njiaau
 蝻	njiau
 蝻	njiauo
+萳	njii
 萳	njiiuo
 喃	njo
 喃	njouoi
@@ -9662,15 +9656,15 @@ sort: by_weight
 盼	pjiauo
 拌	pjiu
 拌	pjiuou
-蹒	pjo
+判	pjo
 袢	pjoa
 袢	pjoaou
 襻	pjoav
 襻	pjoavu
+蹒	pjoi
 蹒	pjoiii
-判	pjou
+叛	pjou
 判	pjouii
-叛	pjouu
 叛	pjouuu
 胖	pju
 番	pjuo
@@ -9740,7 +9734,7 @@ sort: by_weight
 烹	pmovoo
 嘭	pmovoo
 朋	pmu
-鹏	pmu
+鹏	pmuu
 鹏	pmuuua
 膨	pmuv
 膨	pmuvoo
@@ -10360,7 +10354,7 @@ sort: by_weight
 揭	qiiuoi
 歧	qiiv
 歧	qiivuo
-器	qio
+齐	qio
 讫	qioa
 祁	qioaa
 綮	qioaaa
@@ -10379,15 +10373,16 @@ sort: by_weight
 跂	qioiuo
 踦	qioiv
 踦	qioivu
-愭	qioo
+器	qioo
+愭	qioou
 愭	qioouo
 器	qioovu
-嘁	qiov
-齐	qiovu
+弃	qiov
+嘁	qiovu
 嘁	qiovui
 齐	qiovui
 旗	qiovuv
-麒	qiovv
+凄	qiovv
 凄	qiovva
 麒	qiovvi
 弃	qiovvu
@@ -10430,14 +10425,14 @@ sort: by_weight
 圻	qivou
 圻	qivouu
 埼	qivovu
-砌	qivu
+奇	qivu
 戚	qivui
 丌	qivuii
 戚	qivuiv
 磜	qivuu
 磜	qivuua
 欹	qivuua
-碶	qivuv
+砌	qivuv
 砌	qivuva
 奇	qivuvo
 碛	qivuvv
@@ -10672,12 +10667,12 @@ sort: by_weight
 娶	quvi
 取	quviao
 娶	quviau
-坥	quvo
+趣	quvo
 去	quvoao
+坥	quvoi
 坥	quvoia
 趋	quvou
 趋	quvoua
-趣	quvov
 趣	quvovi
 磲	quvu
 磲	quvuav
@@ -10753,12 +10748,12 @@ sort: by_weight
 娶	qvvi
 取	qvviao
 娶	qvviau
-坥	qvvo
+趣	qvvo
 去	qvvoao
+坥	qvvoi
 坥	qvvoia
 趋	qvvou
 趋	qvvoua
-趣	qvvov
 趣	qvvovi
 磲	qvvu
 磲	qvvuav
@@ -10934,16 +10929,14 @@ sort: by_weight
 忍	rnauoa
 刃	rnauoo
 妊	rnauuv
-荏	rni
+仁	rni
 仞	rnia
 仞	rniauo
-人	rnii
-葚	rnii
+荏	rnii
 荏	rniiiu
 葚	rniiv
 葚	rniivi
 任	rniuvi
-仁	rniv
 仁	rnivvv
 认	rno
 讱	rnoa
@@ -11058,7 +11051,6 @@ sort: by_weight
 襦	ruoavo
 褥	ruoavu
 嚅	ruovoa
-入	ruu
 入	ruu
 乳	ruuo
 乳	ruuoaa
@@ -11208,13 +11200,13 @@ sort: by_weight
 塞	seoovo
 麝	seov
 麝	seovui
-啬	seu
+射	seu
 猞	seua
 色	seuaai
 猞	seuaiv
-射	seui
 射	seuiv
 射	seuivi
+啬	seuo
 啬	seuoia
 舌	seuv
 舌	seuvoo
@@ -11327,9 +11319,9 @@ sort: by_weight
 莳	siiio
 莳	siiioi
 蓍	siiiuo
-锶	siio
-食	siioa
+食	siio
 食	siioav
+锶	siioi
 锶	siioia
 铈	siioo
 铈	siioov
@@ -11386,11 +11378,10 @@ sort: by_weight
 噬	siouv
 噬	siouvo
 炻	siouvu
-嘶	siov
+施	siov
 市	siovi
 市	siovia
 嘶	siovii
-施	siovu
 施	siovuv
 凘	siovv
 凘	siovvi
@@ -11435,14 +11426,14 @@ sort: by_weight
 事	siv
 轼	siva
 轼	sivavv
+世	sivi
 肆	sivia
 贳	siviao
 事	siviav
 楒	siviav
 肆	siviav
-世	sivii
 世	siviiv
-䴓	siviu
+斯	siviu
 䴓	siviua
 斯	siviuu
 酾	siviv
@@ -11739,8 +11730,7 @@ sort: by_weight
 瞫	sniav
 瞫	sniavi
 申	sniavv
-莘	snii
-伸	sniia
+伸	snii
 伸	sniiav
 莘	sniio
 莘	sniiov
@@ -11858,10 +11848,9 @@ sort: by_weight
 颡	spao
 颡	spaovu
 桑	spaovv
-搡	spi
+尚	spi
 赏	spio
 赏	spioao
-尚	spioi
 尚	spioia
 裳	spioo
 裳	spioov
@@ -12006,7 +11995,7 @@ sort: by_weight
 澍	suavo
 沭	suavoo
 澍	suavoo
-鹔	suavu
+属	suavu
 鹔	suavua
 属	suavui
 肃	suavvi
@@ -12137,18 +12126,18 @@ sort: by_weight
 祟	svaivv
 尿	svav
 尿	svavaa
-荽	svi
+岁	svi
 睡	svia
 睢	sviai
 睢	sviaio
 帨	sviao
 帨	sviaou
-岁	sviau
 岁	sviaua
 睡	sviauv
 髓	sviav
 眭	sviavo
 髓	sviavu
+荽	svii
 荽	sviiuo
 虽	svo
 谁	svoa
@@ -12313,8 +12302,7 @@ sort: by_weight
 湉	tfao
 湉	tfaooi
 添	tfavvu
-掭	tfi
-田	tfia
+田	tfi
 畋	tfiau
 畋	tfiauv
 田	tfiavi
@@ -12324,6 +12312,7 @@ sort: by_weight
 黇	tfiiiv
 钿	tfio
 钿	tfioia
+掭	tfiu
 掭	tfiuvv
 晪	tfo
 阗	tfoi
@@ -12388,14 +12377,13 @@ sort: by_weight
 颋	tguv
 廷	tguvao
 颋	tguvvu
-圢	tgv
+厅	tgv
 霆	tgvo
 霆	tgvouv
 桯	tgvov
 圢	tgvovi
 桯	tgvovv
 梃	tgvu
-厅	tgvuv
 厅	tgvuvi
 梃	tgvuvi
 珽	tgvv
@@ -12496,8 +12484,8 @@ sort: by_weight
 趯	tivoao
 梯	tivou
 梯	tivoua
-瑅	tivv
-替	tivvo
+替	tivv
+瑅	tivvo
 瑅	tivvoi
 替	tivvoi
 谈	tj
@@ -12777,9 +12765,10 @@ sort: by_weight
 堂	tpiovo
 棠	tpiovv
 搪	tpiuov
-嘡	tpo
+唐	tpo
 蹚	tpoi
 蹚	tpoiio
+嘡	tpoio
 嘡	tpoiou
 惝	tpoo
 惝	tpooio
@@ -12787,7 +12776,6 @@ sort: by_weight
 羰	tpoui
 羰	tpouia
 糖	tpouov
-唐	tpov
 鄌	tpova
 鄌	tpovai
 唐	tpovav
@@ -13331,7 +13319,7 @@ sort: by_weight
 尉	wwavv
 𣲗	wwavva
 尉	wwavvi
-㧑	wwi
+位	wwi
 围	wwia
 帷	wwiai
 帷	wwiaio
@@ -13358,10 +13346,10 @@ sort: by_weight
 苇	wwiiv
 葳	wwiivu
 苇	wwiivv
-位	wwio
-伪	wwiou
+伪	wwio
 伪	wwioua
 位	wwiovo
+㧑	wwiu
 㧑	wwiuou
 伟	wwiv
 伟	wwivva
@@ -13389,9 +13377,8 @@ sort: by_weight
 亹	wwovui
 痿	wwovuv
 味	wwovvi
-魏	wwu
+危	wwu
 鳚	wwua
-危	wwuaa
 危	wwuaaa
 鳚	wwuaav
 鳂	wwuai
@@ -13404,9 +13391,10 @@ sort: by_weight
 艉	wwuua
 艉	wwuuav
 微	wwuuia
-逶	wwuv
+魏	wwuv
 委	wwuva
 委	wwuvau
+逶	wwuvo
 逶	wwuvoa
 魏	wwuvui
 未	wwv
@@ -13585,10 +13573,10 @@ sort: by_weight
 嚣	xdoovu
 哮	xdou
 哮	xdouov
-鸮	xdov
+效	xdov
 哓	xdova
 哓	xdovau
-效	xdovu
+鸮	xdovu
 鸮	xdovua
 效	xdovuv
 孝	xdu
@@ -13607,12 +13595,13 @@ sort: by_weight
 筱	xduvi
 筱	xduvii
 笑	xduvuv
-硝	xdv
+校	xdv
 霄	xdvo
 霄	xdvoio
 枵	xdvov
 枵	xdvova
 校	xdvovu
+硝	xdvu
 硝	xdvuio
 先	xf
 线	xfa
@@ -13829,9 +13818,10 @@ sort: by_weight
 隙	xiaiiu
 隰	xiaio
 隰	xiaioi
-枲	xiao
+习	xiao
+枲	xiaoo
 枲	xiaoov
-习	xiaov
+戏	xiaov
 戏	xiaova
 习	xiaovv
 媳	xiau
@@ -14059,13 +14049,13 @@ sort: by_weight
 嗅	xqouia
 庥	xqov
 庥	xqoviv
-馐	xqu
+秀	xqu
+馐	xqua
 馐	xquaou
 臭	xqui
 臭	xquivu
 貅	xquo
 貅	xquoiv
-秀	xquv
 秀	xquvau
 朽	xqv
 髹	xqvi
@@ -14733,9 +14723,8 @@ sort: by_weight
 液	yea
 也	yeaiaa
 液	yeaovi
-揶	yei
+野	yei
 曳	yeia
-野	yeiaa
 野	yeiaao
 曳	yeiavv
 业	yeii
@@ -14749,11 +14738,13 @@ sort: by_weight
 拽	yeiuia
 掖	yeiuo
 掖	yeiuov
+揶	yeiuv
 揶	yeiuvi
 倻	yeiv
 倻	yeivii
-吔	yeo
+夜	yeo
 谒	yeoa
+吔	yeoai
 吔	yeoaia
 谒	yeoaoi
 咽	yeoi
@@ -14763,14 +14754,13 @@ sort: by_weight
 晔	yeoiiu
 喝	yeoo
 喝	yeooiu
-烨	yeou
+叶	yeou
+烨	yeoui
 烨	yeouiu
-叶	yeouo
 叶	yeouoo
 噎	yeov
 冶	yeova
 冶	yeovao
-夜	yeovi
 夜	yeoviu
 噎	yeovoo
 爷	yeu
@@ -15075,13 +15065,12 @@ sort: by_weight
 瘗	yiovvo
 弈	yiovvu
 奕	yiovvu
-鹢	yiu
-饴	yiua
+疑	yiu
+逸	yiua
 肄	yiuaa
 饴	yiuaao
 疑	yiuaao
 肄	yiuaav
-逸	yiuao
 逸	yiuaoa
 猗	yiuav
 猗	yiuavu
@@ -15093,17 +15082,18 @@ sort: by_weight
 刈	yiuoi
 刈	yiuoii
 乂	yiuoo
+鹢	yiuou
 鹢	yiuoua
 臆	yiuovo
 役	yiuu
 舣	yiuuo
 舣	yiuuou
 役	yiuuua
-迤	yiuv
+移	yiuv
 胰	yiuva
 胰	yiuvav
+迤	yiuvo
 迤	yiuvoa
-移	yiuvu
 移	yiuvua
 簃	yiuvuv
 医	yiv
@@ -15506,7 +15496,6 @@ sort: by_weight
 殃	ypvuia
 有	yr
 又	yra
-又	yra
 幼	yraa
 幼	yraaau
 油	yrai
@@ -15515,7 +15504,7 @@ sort: by_weight
 浟	yraiiu
 游	yrao
 游	yraova
-莠	yri
+优	yri
 由	yria
 邮	yriaa
 黝	yriaaa
@@ -15530,12 +15519,13 @@ sort: by_weight
 囿	yriav
 由	yriavi
 囿	yriavu
-莸	yrii
+莠	yrii
 莜	yriii
 莜	yriiii
 悠	yriio
 悠	yriioa
 攸	yriiu
+莸	yriiu
 莸	yriiua
 攸	yriiuv
 莠	yriiuv
@@ -15543,9 +15533,9 @@ sort: by_weight
 铀	yrioia
 铕	yriov
 铕	yriovu
-卣	yriv
+佑	yriv
+卣	yrivi
 卣	yrivia
-优	yrivu
 优	yrivua
 佑	yrivuo
 侑	yrivuu
@@ -15693,18 +15683,19 @@ sort: by_weight
 隃	yuaiiv
 渝	yuaiv
 渝	yuaivu
-遹	yuao
+预	yuao
 予	yuaoa
 予	yuaoai
 羽	yuaoao
 汩	yuaoi
 矞	yuaoia
 汩	yuaoii
+遹	yuaoo
 遹	yuaooa
 鹬	yuaou
 豫	yuaoua
 鹬	yuaoua
-预	yuaov
+淤	yuaov
 淤	yuaova
 淯	yuaova
 预	yuaovu
@@ -15724,7 +15715,7 @@ sort: by_weight
 尉	yuavvi
 鬻	yuavvo
 聿	yuavvv
-揄	yui
+余	yui
 遇	yuia
 髃	yuiai
 嵎	yuiaia
@@ -15753,6 +15744,7 @@ sort: by_weight
 俣	yuiov
 俣	yuiovv
 钰	yuiovv
+揄	yuiu
 揄	yuiuiv
 虞	yuiv
 觎	yuivi
@@ -15768,7 +15760,7 @@ sort: by_weight
 龉	yuivv
 龉	yuivvi
 余	yuivvv
-喻	yuo
+育	yuo
 语	yuoa
 谕	yuoai
 褕	yuoaiv
@@ -15777,10 +15769,10 @@ sort: by_weight
 谀	yuoaui
 裕	yuoauo
 语	yuoavi
-昱	yuoi
+喻	yuoi
 喁	yuoia
 喁	yuoiav
-阏	yuoio
+昱	yuoio
 阏	yuoiov
 昱	yuoiov
 阈	yuoiv
@@ -15796,9 +15788,9 @@ sort: by_weight
 窳	yuoou
 窳	yuoouu
 宇	yuoovv
-燏	yuou
+煜	yuou
+燏	yuoua
 燏	yuouao
-煜	yuouo
 煜	yuouoi
 燠	yuouu
 燠	yuouui
@@ -15850,9 +15842,9 @@ sort: by_weight
 欤	yuva
 欤	yuvaua
 与	yuvavv
-敔	yuvi
-雨	yuvia
+雨	yuvi
 雨	yuviai
+敔	yuviu
 敔	yuviuv
 榆	yuviv
 榆	yuvivu
@@ -15897,18 +15889,19 @@ sort: by_weight
 隃	yvaiiv
 渝	yvaiv
 渝	yvaivu
-遹	yvao
+预	yvao
 予	yvaoa
 予	yvaoai
 羽	yvaoao
 汩	yvaoi
 矞	yvaoia
 汩	yvaoii
+遹	yvaoo
 遹	yvaooa
 鹬	yvaou
 豫	yvaoua
 鹬	yvaoua
-预	yvaov
+淤	yvaov
 淤	yvaova
 淯	yvaova
 预	yvaovu
@@ -15928,7 +15921,7 @@ sort: by_weight
 尉	yvavvi
 鬻	yvavvo
 聿	yvavvv
-揄	yvi
+余	yvi
 遇	yvia
 髃	yviai
 嵎	yviaia
@@ -15957,6 +15950,7 @@ sort: by_weight
 俣	yviov
 俣	yviovv
 钰	yviovv
+揄	yviu
 揄	yviuiv
 虞	yviv
 觎	yvivi
@@ -15972,7 +15966,7 @@ sort: by_weight
 龉	yvivv
 龉	yvivvi
 余	yvivvv
-喻	yvo
+育	yvo
 语	yvoa
 谕	yvoai
 褕	yvoaiv
@@ -15981,10 +15975,10 @@ sort: by_weight
 谀	yvoaui
 裕	yvoauo
 语	yvoavi
-昱	yvoi
+喻	yvoi
 喁	yvoia
 喁	yvoiav
-阏	yvoio
+昱	yvoio
 阏	yvoiov
 昱	yvoiov
 阈	yvoiv
@@ -16054,9 +16048,9 @@ sort: by_weight
 欤	yvva
 欤	yvvaua
 与	yvvavv
-敔	yvvi
-雨	yvvia
+雨	yvvi
 雨	yvviai
+敔	yvviu
 敔	yvviuv
 榆	yvviv
 榆	yvvivu
@@ -16371,11 +16365,12 @@ sort: by_weight
 笮	zeuvuv
 箦	zeuvv
 箦	zeuvvv
-赜	zev
+责	zev
 辄	zeva
 辙	zevao
 辙	zevaov
 辄	zevavi
+赜	zevi
 赜	zevivv
 喆	zevo
 赭	zevou
@@ -16387,9 +16382,8 @@ sort: by_weight
 詟	zevuo
 詟	zevuov
 磔	zevuua
-责	zevv
+柘	zevv
 责	zevvao
-柘	zevvu
 柘	zevvuo
 拽	zgi
 拽	zgiuia
@@ -16518,13 +16512,13 @@ sort: by_weight
 锧	ziiouu
 铚	ziiov
 铚	ziiova
-掷	ziiu
+值	ziiu
 絷	ziiua
 絷	ziiuaa
 贽	ziiuao
 挚	ziiui
 挚	ziiuiu
-摭	ziiuo
+掷	ziiuo
 值	ziiuoi
 掷	ziiuou
 摭	ziiuov
@@ -16618,7 +16612,7 @@ sort: by_weight
 膣	ziuoo
 膣	ziuooa
 豸	ziuoou
-卮	ziuu
+质	ziuu
 脂	ziuua
 卮	ziuuaa
 脂	ziuuao
@@ -16627,7 +16621,6 @@ sort: by_weight
 徵	ziuuia
 肢	ziuuo
 肢	ziuuoa
-质	ziuuu
 质	ziuuuo
 智	ziuv
 制	ziuvi
@@ -16653,7 +16646,7 @@ sort: by_weight
 轾	zivav
 轾	zivava
 至	zivavo
-鄑	zivi
+职	zivi
 郦	zivia
 郦	ziviai
 鄑	ziviai
@@ -16661,7 +16654,6 @@ sort: by_weight
 栉	ziviia
 鼒	ziviia
 髭	ziviiv
-职	zivio
 职	ziviou
 酯	ziviu
 酯	ziviua
@@ -17377,12 +17369,12 @@ sort: by_weight
 崒	zuiaov
 蛛	zuiau
 蛛	zuiauv
-苎	zuii
+著	zuii
 菹	zuiia
 菹	zuiiai
 俎	zuiii
 俎	zuiiia
-苧	zuiio
+苎	zuiio
 苎	zuiioo
 苧	zuiioo
 茱	zuiiu
@@ -17423,13 +17415,12 @@ sort: by_weight
 烛	zuouia
 炷	zuouo
 炷	zuouov
-麈	zuov
+族	zuov
 卒	zuovi
 卒	zuovii
 疰	zuovo
 麈	zuovov
 疰	zuovov
-族	zuovu
 族	zuovuv
 瘃	zuovv
 主	zuovvi
@@ -17484,9 +17475,9 @@ sort: by_weight
 缒	zvaau
 缒	zvaaui
 坠	zvaivo
-蕞	zvi
-罪	zvia
+罪	zvi
 罪	zviaiv
+蕞	zvii
 蕞	zviioi
 锥	zvio
 锥	zvioio
