更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -10314,9 +10314,8 @@ sort: by_weight
 漆	qiavia
 淇	qiavii
 柒	qiavvv
-芑	qii
-畦	qiia
-岂	qiiaa
+企	qii
+岂	qiia
 屺	qiiaav
 岂	qiiaav
 蛴	qiiao
@@ -10324,6 +10323,7 @@ sort: by_weight
 蛴	qiiaov
 岐	qiiau
 岐	qiiauo
+畦	qiiav
 崎	qiiav
 蜞	qiiavi
 畦	qiiavo
