--- a/rime/xkyddz.dict.yaml
+++ b/rime/xkyddz.dict.yaml
@@ -3431,7 +3431,6 @@ sort: by_weight
 腐	fuovi
 腐	fuovia
 府	fuoviv
-呋	fuovv
 呒	fuovv
 呋	fuovvu
 呒	fuovvu
@@ -5376,21 +5375,21 @@ sort: by_weight
 侥	jdiv
 侥	jdiva
 侥	jdivau
-嚼	jdo
+交	jdo
 叫	jdoaii
 跤	jdoi
 噍	jdoio
 跤	jdoiov
 噍	jdoiov
-窖	jdoo
+觉	jdoo
 觉	jdooia
+窖	jdoou
 窖	jdoouv
-燋	jdou
+嚼	jdou
+燋	jdoui
 燋	jdouio
-嚼	jdouo
 嚼	jdouoo
-交	jdov
-郊	jdova
+郊	jdov
 郊	jdovai
 䴔	jdovu
 䴔	jdovua
@@ -5692,7 +5691,7 @@ sort: by_weight
 攫	jhiuia
 撅	jhiuv
 撅	jhiuvu
-噘	jho
+决	jho
 诀	jhoa
 谲	jhoaa
 谲	jhoaao
@@ -5702,11 +5701,11 @@ sort: by_weight
 噱	jhoiva
 蹶	jhoivu
 觉	jhooia
-爝	jhou
-嚼	jhouo
+嚼	jhou
 嚼	jhouoo
+爝	jhouu
 爝	jhouuo
-决	jhov
+噘	jhov
 决	jhovav
 噘	jhovuo
 觖	jhu
@@ -6092,16 +6091,15 @@ sort: by_weight
 笳	jsuva
 笳	jsuvau
 稼	jsuvoo
-嘉	jsv
+夹	jsv
 枷	jsva
 枷	jsvauo
 贾	jsvi
 贾	jsviao
-颉	jsvo
+嘉	jsvo
 郏	jsvoa
 郏	jsvoai
 嘉	jsvoau
-夹	jsvou
 夹	jsvouv
 颊	jsvov
 颊	jsvovu
@@ -8515,7 +8513,6 @@ sort: by_weight
 咪	mioo
 密	miooia
 蜜	miooia
-宓	miooo
 嘧	miooo
 宓	mioooa
 嘧	mioooa
@@ -10323,7 +10320,6 @@ sort: by_weight
 蛴	qiiaov
 岐	qiiau
 岐	qiiauo
-畦	qiiav
 崎	qiiav
 蜞	qiiavi
 畦	qiiavo
@@ -14143,9 +14139,9 @@ sort: by_weight
 昡	xtoiov
 晅	xtoivo
 宣	xtoo
-吅	xtooo
 愃	xtooo
 喧	xtoooa
+吅	xtoooo
 愃	xtoooo
 宣	xtoovo
 炫	xtou
@@ -14383,23 +14379,23 @@ sort: by_weight
 泄	xxavii
 渫	xxavii
 屑	xxavio
-携	xxi
+些	xxi
 蝎	xxia
 蝎	xxiaoi
 薤	xxii
 薢	xxiiu
 薢	xxiiua
 薤	xxiivu
-揳	xxiu
+携	xxiu
+揳	xxiui
 携	xxiuio
 撷	xxiuv
 挟	xxiuvo
 撷	xxiuvo
 揳	xxiuvv
-些	xxiv
+斜	xxiv
 偕	xxiva
 偕	xxivau
-斜	xxivo
 斜	xxivoo
 㙦	xxivv
 偰	xxivvi
@@ -17112,14 +17108,14 @@ sort: by_weight
 嘬	zoooiv
 怍	zooou
 怍	zooouv
-着	zoou
-焯	zooui
+灼	zoou
+着	zooui
+着	zoouia
 焯	zoouiv
-灼	zoouu
 灼	zoouua
-啄	zoov
-座	zoovi
+座	zoov
 座	zoovii
+啄	zoovu
 啄	zoovua
 胙	zou
 胙	zouuvi
