--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -13814,7 +13814,7 @@ sort: by_weight
 戏	xiaov
 戏	xiaova
 习	xiaovv
-媳	xiau
+洗	xiau
 汐	xiaua
 汐	xiauao
 潟	xiaui
@@ -13822,6 +13822,7 @@ sort: by_weight
 溪	xiauo
 溪	xiauoo
 浠	xiauov
+媳	xiauu
 媳	xiauui
 嬉	xiauv
 洗	xiauvi
